package methods

import (
	"bytes"
	"context"
	"encoding/base64"
	"encoding/hex"
	"encoding/json"
	"fmt"
	"math/big"
	"strings"

	"github.com/weisyn/v1/internal/api/format"
	utxopb "github.com/weisyn/v1/pb/blockchain/utxo"
	cryptoInterface "github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/ispc"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/utils"
	"go.uber.org/zap"
)

// StateMethods çŠ¶æ€æŸ¥è¯¢ç›¸å…³æ–¹æ³•
type StateMethods struct {
	logger          *zap.Logger
	accountQuery    persistence.AccountQuery
	utxoQuery       persistence.UTXOQuery
	blockQuery      persistence.BlockQuery
	ispcCoordinator ispc.ISPCCoordinator           // ä½¿ç”¨ ISPC Coordinator ä»£æ›¿ç›´æ¥çš„ WASM Engine
	addressManager  cryptoInterface.AddressManager // åœ°å€ç®¡ç†å™¨ï¼Œç”¨äºéªŒè¯Base58æ ¼å¼åœ°å€
}

// NewStateMethods åˆ›å»ºçŠ¶æ€æ–¹æ³•å¤„ç†å™¨
func NewStateMethods(
	logger *zap.Logger,
	accountQuery persistence.AccountQuery,
	utxoQuery persistence.UTXOQuery,
	blockQuery persistence.BlockQuery,
	ispcCoordinator ispc.ISPCCoordinator,
	addressManager cryptoInterface.AddressManager,
) *StateMethods {
	return &StateMethods{
		logger:          logger,
		accountQuery:    accountQuery,
		utxoQuery:       utxoQuery,
		blockQuery:      blockQuery,
		ispcCoordinator: ispcCoordinator,
		addressManager:  addressManager,
	}
}

// GetBalance æŸ¥è¯¢è´¦æˆ·ä½™é¢
// Method: wes_getBalance
// Params: [address: string, blockParam: object (optional)]
// address: Base58æ ¼å¼çš„WESåœ°å€ï¼ˆå¦‚CUQ3g6P5WmFN289pPn7AAhnQ3T2cZRv2BRï¼‰
// blockParam ç¤ºä¾‹: {"blockHeight": "0x1234"} æˆ– {"blockHash": "0xabc..."}
func (m *StateMethods) GetBalance(ctx context.Context, params json.RawMessage) (interface{}, error) {
	var args []interface{}
	if err := json.Unmarshal(params, &args); err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("invalid params: %v", err), nil)
	}

	if len(args) == 0 {
		return nil, NewInvalidParamsError("missing address", nil)
	}

	// 1. è§£æåœ°å€å‚æ•°ï¼ˆWESä½¿ç”¨Base58æ ¼å¼ï¼Œä¸å…¼å®¹ETHçš„0xå‰ç¼€æ ¼å¼ï¼‰
	addressStr, ok := args[0].(string)
	if !ok {
		return nil, NewInvalidParamsError("address must be string", nil)
	}

	// éªŒè¯å¹¶è½¬æ¢Base58æ ¼å¼åœ°å€
	if m.addressManager == nil {
		return nil, NewInternalError("address manager not available", nil)
	}

	// æ‹’ç»0xå‰ç¼€çš„ETHåœ°å€æ ¼å¼
	if len(addressStr) > 2 && (addressStr[:2] == "0x" || addressStr[:2] == "0X") {
		return nil, NewInvalidParamsError("WESåœ°å€å¿…é¡»ä½¿ç”¨Base58æ ¼å¼ï¼Œä¸æ”¯æŒ0xå‰ç¼€çš„ETHåœ°å€æ ¼å¼", nil)
	}

	// éªŒè¯Base58æ ¼å¼åœ°å€
	validAddress, err := m.addressManager.StringToAddress(addressStr)
	if err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("invalid address format: %v", err), nil)
	}

	// è½¬æ¢ä¸ºå­—èŠ‚æ•°ç»„
	address, err := m.addressManager.AddressToBytes(validAddress)
	if err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("failed to convert address: %v", err), nil)
	}

	// 2. è§£æçŠ¶æ€é”šç‚¹å‚æ•°ï¼ˆatHeight/atHashï¼‰- å¯é€‰
	var anchorHeight uint64
	var anchorHash []byte
	if len(args) > 1 {
		if blockParam, ok := args[1].(map[string]interface{}); ok {
			if heightStr, ok := blockParam["blockHeight"].(string); ok {
				if len(heightStr) > 2 && heightStr[:2] == "0x" {
					heightStr = heightStr[2:]
				}
				_, err := fmt.Sscanf(heightStr, "%x", &anchorHeight)
				if err != nil {
					return nil, NewInvalidParamsError(fmt.Sprintf("invalid blockHeight: %v", err), nil)
				}
			}
			if hashStr, ok := blockParam["blockHash"].(string); ok {
				if len(hashStr) > 2 && hashStr[:2] == "0x" {
					hashStr = hashStr[2:]
				}
				anchorHash, err = hex.DecodeString(hashStr)
				if err != nil {
					return nil, NewInvalidParamsError(fmt.Sprintf("invalid blockHash: %v", err), nil)
				}
			}
		}
	}

	// 3. è°ƒç”¨accountQuery.GetAccountBalance()
	if m.accountQuery == nil {
		return nil, NewInternalError("account query not available", nil)
	}
	balanceInfo, err := m.accountQuery.GetAccountBalance(ctx, address, nil) // nilè¡¨ç¤ºåŸç”Ÿä»£å¸
	if err != nil {
		m.logger.Error("Failed to get balance",
			zap.String("address", hex.EncodeToString(address)),
			zap.Error(err))
		return nil, NewInternalError(err.Error(), nil)
	}

	// 4. è·å–çŠ¶æ€é”šç‚¹ä¿¡æ¯ï¼ˆé«˜åº¦ã€å“ˆå¸Œã€çŠ¶æ€æ ¹ã€æ—¶é—´æˆ³ï¼‰
	var height uint64
	var blockHash []byte
	var stateRoot []byte
	var timestamp int64

	if anchorHeight > 0 {
		// ä½¿ç”¨æŒ‡å®šé«˜åº¦çš„é”šç‚¹
		height = anchorHeight
		block, err := m.blockQuery.GetBlockByHeight(ctx, height)
		if err == nil && block != nil && block.Header != nil {
			// éœ€è¦é€šè¿‡ BlockHashService è®¡ç®—åŒºå—å“ˆå¸Œ
			stateRoot = block.Header.StateRoot
			timestamp = int64(block.Header.Timestamp)
		}
	} else if len(anchorHash) > 0 {
		// ä½¿ç”¨æŒ‡å®šå“ˆå¸Œçš„é”šç‚¹
		block, err := m.blockQuery.GetBlockByHash(ctx, anchorHash)
		if err == nil && block != nil && block.Header != nil {
			blockHash = anchorHash
			height = block.Header.Height
			stateRoot = block.Header.StateRoot
			timestamp = int64(block.Header.Timestamp)
		}
	} else {
		// ä½¿ç”¨æœ€æ–°çŠ¶æ€
		h, bHash, err := m.blockQuery.GetHighestBlock(ctx)
		if err == nil {
			height = h
			blockHash = bHash
			block, err := m.blockQuery.GetBlockByHash(ctx, blockHash)
			if err == nil && block != nil && block.Header != nil {
				stateRoot = block.Header.StateRoot
				timestamp = int64(block.Header.Timestamp)
			}
		}
	}

	// ğŸ” DEBUG: æ‰“å°ä½™é¢ä¿¡æ¯
	m.logger.Info("ğŸ” [DEBUG] GetBalance è¿”å›",
		zap.String("address", hex.EncodeToString(address)),
		zap.Uint64("available_wei", balanceInfo.Available),
		zap.String("balance_hex", fmt.Sprintf("0x%x", balanceInfo.Available)),
	)

	// æ„é€ å“åº”ï¼ˆåŒ…å«çŠ¶æ€é”šç‚¹ï¼‰
	resp := map[string]interface{}{
		// balance: æœ€å°å•ä½ï¼ˆBaseUnitï¼‰ï¼Œç”¨äºç¨‹åºè®¡ç®—ï¼ˆä¿æŒå…¼å®¹ï¼‰
		"balance": balanceInfo.Available,
		// balance_wes: ç”¨æˆ·å±•ç¤ºç”¨ï¼ˆWESå•ä½ï¼Œ8ä½å°æ•°ï¼‰
		"balance_wes": utils.FormatWeiToDecimal(balanceInfo.Available),
		"decimals":    utils.Decimals,
		"wei_per_wes": utils.WeiPer,
		"height":      height,
	}
	if len(blockHash) > 0 {
		resp["block_hash"] = format.HashToHex(blockHash)
	}
	if len(stateRoot) > 0 {
		resp["state_root"] = format.HashToHex(stateRoot)
	}
	if timestamp > 0 {
		resp["timestamp"] = timestamp
	}

	return resp, nil
}

// GetContractTokenBalance æŸ¥è¯¢è´¦æˆ·çš„åˆçº¦ä»£å¸ä½™é¢
// Method: wes_getContractTokenBalance
// Params: [{ "address": "<Base58åœ°å€>", "content_hash": "<åˆçº¦å†…å®¹å“ˆå¸Œ>", "token_id": "<ä»£å¸æ ‡è¯†ï¼Œå¯é€‰>" }]
func (m *StateMethods) GetContractTokenBalance(ctx context.Context, params json.RawMessage) (interface{}, error) {
	var req struct {
		Address     string `json:"address"`
		ContentHash string `json:"content_hash"`
		TokenID     string `json:"token_id,omitempty"`
	}

	// JSON-RPC å¯èƒ½ä»¥ [{...}] æˆ– {...} å½¢å¼ä¼ å‚
	var paramsArray []map[string]interface{}
	if err := json.Unmarshal(params, &paramsArray); err == nil && len(paramsArray) > 0 {
		data, err := json.Marshal(paramsArray[0])
		if err != nil {
			return nil, NewInvalidParamsError(fmt.Sprintf("marshal params object failed: %v", err), nil)
		}
		if err := json.Unmarshal(data, &req); err != nil {
			return nil, NewInvalidParamsError(fmt.Sprintf("invalid params object: %v", err), nil)
		}
	} else {
		if err := json.Unmarshal(params, &req); err != nil {
			return nil, NewInvalidParamsError(fmt.Sprintf("invalid params: %v", err), nil)
		}
	}

	req.Address = strings.TrimSpace(req.Address)
	req.ContentHash = strings.TrimSpace(strings.TrimPrefix(req.ContentHash, "0x"))
	req.TokenID = strings.TrimSpace(req.TokenID)

	if req.Address == "" {
		return nil, NewInvalidParamsError("address is required", nil)
	}
	if req.ContentHash == "" {
		return nil, NewInvalidParamsError("content_hash is required", nil)
	}
	if len(req.ContentHash) != 64 {
		return nil, NewInvalidParamsError("content_hash must be 32-byte hex string", nil)
	}

	// åœ°å€è§£æ
	if m.addressManager == nil {
		return nil, NewInternalError("address manager not available", nil)
	}
	validAddress, err := m.addressManager.StringToAddress(req.Address)
	if err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("invalid address format: %v", err), nil)
	}
	addressBytes, err := m.addressManager.AddressToBytes(validAddress)
	if err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("failed to convert address: %v", err), nil)
	}

	// åˆçº¦å†…å®¹å“ˆå¸Œè§£æ
	contentHashBytes, err := hex.DecodeString(req.ContentHash)
	if err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("invalid content_hash: %v", err), nil)
	}

	// æ ¹æ®å†…å®¹å“ˆå¸Œæ¨å¯¼åˆçº¦åœ°å€ï¼ˆ20å­—èŠ‚ hash160ï¼‰
	contractAddrBytes := hash160(contentHashBytes)

	// TokenID é»˜è®¤ä½¿ç”¨ "default"
	tokenIDStr := req.TokenID
	if tokenIDStr == "" {
		tokenIDStr = "default"
	}
	tokenIDBytes := []byte(tokenIDStr)

	if m.utxoQuery == nil {
		return nil, NewInternalError("utxo query not available", nil)
	}

	category := utxopb.UTXOCategory_UTXO_CATEGORY_ASSET
	utxos, err := m.utxoQuery.GetUTXOsByAddress(ctx, addressBytes, &category, true)
	if err != nil {
		m.logger.Error("Failed to get UTXOs for contract balance",
			zap.String("address", hex.EncodeToString(addressBytes)),
			zap.Error(err))
		return nil, NewInternalError(err.Error(), nil)
	}

	total := big.NewInt(0)
	utxoCount := 0

	for _, utxoObj := range utxos {
		if utxoObj == nil {
			continue
		}
		output := utxoObj.GetCachedOutput()
		if output == nil {
			continue
		}
		asset := output.GetAsset()
		if asset == nil {
			continue
		}
		contractToken := asset.GetContractToken()
		if contractToken == nil {
			continue
		}

		if !bytes.Equal(contractToken.GetContractAddress(), contractAddrBytes) {
			continue
		}

		fungibleID := contractToken.GetFungibleClassId()
		if len(fungibleID) == 0 {
			continue
		}
		if !bytes.Equal(fungibleID, tokenIDBytes) {
			continue
		}

		amountStr := contractToken.Amount
		if amountStr == "" {
			continue
		}
		amount, ok := new(big.Int).SetString(amountStr, 10)
		if !ok {
			continue
		}

		total.Add(total, amount)
		utxoCount++
	}

	// çŠ¶æ€é”šç‚¹ä¿¡æ¯ï¼ˆä¸ wes_getBalance ä¿æŒä¸€è‡´ï¼‰
	var height uint64
	var blockHash []byte
	var stateRoot []byte
	var timestamp int64

	if m.blockQuery != nil {
		h, bHash, err := m.blockQuery.GetHighestBlock(ctx)
		if err == nil {
			height = h
			blockHash = bHash
			if block, err := m.blockQuery.GetBlockByHash(ctx, blockHash); err == nil && block != nil && block.Header != nil {
				stateRoot = block.Header.StateRoot
				timestamp = int64(block.Header.Timestamp)
			}
		}
	}

	// æ„é€ è¿”å›
	// å°†åˆçº¦åœ°å€è½¬æ¢ä¸º Base58Check æ ¼å¼
	contractAddress := format.MustAddressToBase58(contractAddrBytes, m.addressManager)

	response := map[string]interface{}{
		"address":          req.Address,
		"content_hash":     strings.ToLower(req.ContentHash), // ä¸å¸¦ 0x å‰ç¼€
		"contract_address": contractAddress,                  // Base58Check æ ¼å¼
		"token_id":         tokenIDStr,
		"balance":          total.String(),
		"utxo_count":       utxoCount,
		"height":           height,
	}

	if total.IsUint64() {
		response["balance_uint64"] = total.Uint64()
	}
	if len(blockHash) > 0 {
		response["block_hash"] = format.HashToHex(blockHash)
	}
	if len(stateRoot) > 0 {
		response["state_root"] = format.HashToHex(stateRoot)
	}
	if timestamp > 0 {
		response["timestamp"] = timestamp
	}

	return response, nil
}

// GetUTXO æŸ¥è¯¢UTXO
// Method: wes_getUTXO
// Params: [address: string, blockParam: object (optional)]
// address: Base58æ ¼å¼çš„WESåœ°å€ï¼ˆå¦‚CUQ3g6P5WmFN289pPn7AAhnQ3T2cZRv2BRï¼‰
func (m *StateMethods) GetUTXO(ctx context.Context, params json.RawMessage) (interface{}, error) {
	var args []interface{}
	if err := json.Unmarshal(params, &args); err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("invalid params: %v", err), nil)
	}

	if len(args) == 0 {
		return nil, NewInvalidParamsError("missing address", nil)
	}

	// 1. è§£æåœ°å€å‚æ•°ï¼ˆWESä½¿ç”¨Base58æ ¼å¼ï¼Œä¸å…¼å®¹ETHçš„0xå‰ç¼€æ ¼å¼ï¼‰
	addressStr, ok := args[0].(string)
	if !ok {
		return nil, NewInvalidParamsError("address must be string", nil)
	}

	// éªŒè¯å¹¶è½¬æ¢Base58æ ¼å¼åœ°å€
	if m.addressManager == nil {
		return nil, NewInternalError("address manager not available", nil)
	}

	// æ‹’ç»0xå‰ç¼€çš„ETHåœ°å€æ ¼å¼
	if len(addressStr) > 2 && (addressStr[:2] == "0x" || addressStr[:2] == "0X") {
		return nil, NewInvalidParamsError("WESåœ°å€å¿…é¡»ä½¿ç”¨Base58æ ¼å¼ï¼Œä¸æ”¯æŒ0xå‰ç¼€çš„ETHåœ°å€æ ¼å¼", nil)
	}

	// éªŒè¯Base58æ ¼å¼åœ°å€
	validAddress, err := m.addressManager.StringToAddress(addressStr)
	if err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("invalid address format: %v", err), nil)
	}

	// è½¬æ¢ä¸ºå­—èŠ‚æ•°ç»„
	address, err := m.addressManager.AddressToBytes(validAddress)
	if err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("failed to convert address: %v", err), nil)
	}

	// 2. è§£æçŠ¶æ€é”šç‚¹å‚æ•°ï¼ˆå¯é€‰ï¼‰
	var anchorHeight uint64
	var anchorHash []byte
	if len(args) > 1 {
		if blockParam, ok := args[1].(map[string]interface{}); ok {
			if heightStr, ok := blockParam["blockHeight"].(string); ok {
				if len(heightStr) > 2 && heightStr[:2] == "0x" {
					heightStr = heightStr[2:]
				}
				_, err := fmt.Sscanf(heightStr, "%x", &anchorHeight)
				if err != nil {
					return nil, NewInvalidParamsError(fmt.Sprintf("invalid blockHeight: %v", err), nil)
				}
			}
			if hashStr, ok := blockParam["blockHash"].(string); ok {
				if len(hashStr) > 2 && hashStr[:2] == "0x" {
					hashStr = hashStr[2:]
				}
				anchorHash, err = hex.DecodeString(hashStr)
				if err != nil {
					return nil, NewInvalidParamsError(fmt.Sprintf("invalid blockHash: %v", err), nil)
				}
			}
		}
	}

	// 3. è°ƒç”¨utxoQuery.GetUTXOsByAddress()
	if m.utxoQuery == nil {
		return nil, NewInternalError("utxo query not available", nil)
	}
	utxos, err := m.utxoQuery.GetUTXOsByAddress(ctx, address, nil, true)
	if err != nil {
		m.logger.Error("Failed to get UTXOs",
			zap.String("address", hex.EncodeToString(address)),
			zap.Error(err))
		return nil, NewInternalError(err.Error(), nil)
	}

	// 4. æ ¼å¼åŒ–UTXOåˆ—è¡¨
	utxoList := make([]interface{}, 0, len(utxos))
	for _, utxo := range utxos {
		if utxo == nil || utxo.Outpoint == nil {
			continue
		}
		utxoItem := map[string]interface{}{
			"outpoint": fmt.Sprintf("%s:%d", hex.EncodeToString(utxo.Outpoint.TxId), utxo.Outpoint.OutputIndex),
			"height":   fmt.Sprintf("0x%x", utxo.BlockHeight),
		}
		// å¦‚æœæœ‰ç¼“å­˜çš„outputï¼Œå¯ä»¥è·å–amountå’ŒtokenIDä¿¡æ¯
		if cachedOutput := utxo.GetCachedOutput(); cachedOutput != nil {
			if assetOut := cachedOutput.GetAsset(); assetOut != nil {
				if nativeCoin := assetOut.GetNativeCoin(); nativeCoin != nil {
					// åŸç”Ÿå¸ï¼ˆamount: BaseUnit å­—ç¬¦ä¸²ï¼›amount_wes: ç”¨æˆ·å±•ç¤ºç”¨ï¼‰
					utxoItem["amount"] = nativeCoin.Amount
					if amt, err := utils.TryParseAmountUint64(nativeCoin.Amount); err == nil {
						utxoItem["amount_wes"] = utils.FormatWeiToDecimal(amt)
					}
					// åŸç”Ÿå¸æ²¡æœ‰ tokenIDï¼Œä¸è®¾ç½® tokenID å­—æ®µ
				} else if contractToken := assetOut.GetContractToken(); contractToken != nil {
					// åˆçº¦ä»£å¸
					utxoItem["amount"] = contractToken.Amount
					// æå– tokenIDï¼ˆä» TokenIdentifier oneof ä¸­ï¼‰
					// æ³¨æ„ï¼šGetTokenIdentifier() è¿”å›æ¥å£ç±»å‹ï¼Œéœ€è¦ä½¿ç”¨ç±»å‹æ–­è¨€
					if fungibleID := contractToken.GetFungibleClassId(); len(fungibleID) > 0 {
						utxoItem["tokenID"] = hex.EncodeToString(fungibleID)
					} else if nftID := contractToken.GetNftUniqueId(); len(nftID) > 0 {
						utxoItem["tokenID"] = hex.EncodeToString(nftID)
					} else if semiFungibleID := contractToken.GetSemiFungibleId(); semiFungibleID != nil {
						// SemiFungibleId æ˜¯ç»“æ„ä½“ï¼Œéœ€è¦åºåˆ—åŒ–æˆ–æå–å…³é”®å­—æ®µ
						// ç®€åŒ–ï¼šä½¿ç”¨ç»“æ„ä½“çš„å­—ç¬¦ä¸²è¡¨ç¤ºï¼ˆå®é™…åº”è¯¥æå–å…·ä½“å­—æ®µï¼‰
						utxoItem["tokenID"] = hex.EncodeToString([]byte(semiFungibleID.String()))
					}
					// åˆçº¦åœ°å€
					if len(contractToken.ContractAddress) > 0 {
						utxoItem["contractAddress"] = hex.EncodeToString(contractToken.ContractAddress)
					}
				}
			}
		}
		utxoList = append(utxoList, utxoItem)
	}

	// 5. è·å–çŠ¶æ€é”šç‚¹ä¿¡æ¯
	var height uint64
	var blockHash []byte
	var stateRoot []byte
	var timestamp int64

	if anchorHeight > 0 {
		height = anchorHeight
		block, err := m.blockQuery.GetBlockByHeight(ctx, height)
		if err == nil && block != nil && block.Header != nil {
			stateRoot = block.Header.StateRoot
			timestamp = int64(block.Header.Timestamp)
		}
	} else if len(anchorHash) > 0 {
		block, err := m.blockQuery.GetBlockByHash(ctx, anchorHash)
		if err == nil && block != nil && block.Header != nil {
			blockHash = anchorHash
			height = block.Header.Height
			stateRoot = block.Header.StateRoot
			timestamp = int64(block.Header.Timestamp)
		}
	} else {
		h, bHash, err := m.blockQuery.GetHighestBlock(ctx)
		if err == nil {
			height = h
			blockHash = bHash
			block, err := m.blockQuery.GetBlockByHash(ctx, blockHash)
			if err == nil && block != nil && block.Header != nil {
				stateRoot = block.Header.StateRoot
				timestamp = int64(block.Header.Timestamp)
			}
		}
	}

	// æ„é€ å“åº”
	resp := map[string]interface{}{
		"utxos":  utxoList,
		"height": height,
	}
	if len(blockHash) > 0 {
		resp["block_hash"] = format.HashToHex(blockHash)
	}
	if len(stateRoot) > 0 {
		resp["state_root"] = format.HashToHex(stateRoot)
	}
	if timestamp > 0 {
		resp["timestamp"] = timestamp
	}

	return resp, nil
}

// Call æ‰§è¡Œåˆçº¦è°ƒç”¨ï¼ˆåªè¯»ï¼‰
// Method: wes_call
// Params: [callData: object, blockParam: object (optional)]
// callData: {to: contractAddress, data: functionCall, from: callerAddress (optional)}
func (m *StateMethods) Call(ctx context.Context, params json.RawMessage) (interface{}, error) {
	var args []interface{}
	if err := json.Unmarshal(params, &args); err != nil {
		return nil, NewInvalidParamsError(fmt.Sprintf("invalid params: %v", err), nil)
	}

	if len(args) == 0 {
		return nil, NewInvalidParamsError("missing call data", nil)
	}

	// 1. è§£æè°ƒç”¨å‚æ•°
	callData, ok := args[0].(map[string]interface{})
	if !ok {
		return nil, NewInvalidParamsError("callData must be object", nil)
	}

	contractAddr, ok := callData["to"].(string)
	if !ok || contractAddr == "" {
		return nil, NewInvalidParamsError("missing contract address (to)", nil)
	}

	functionData, ok := callData["data"].(string)
	if !ok {
		return nil, NewInvalidParamsError("missing function data", nil)
	}

	// 2. è§£æçŠ¶æ€é”šç‚¹å‚æ•°ï¼ˆå¯é€‰ï¼‰
	// å½“å‰å®ç°ï¼šwes_call æ‰§è¡Œâ€œåªè¯»æ¨¡æ‹Ÿâ€ï¼Œä¸å¯¹çŠ¶æ€é”šç‚¹åšå›æ”¾ï¼ˆåç»­å¯æ‰©å±•ä¸ºæŒ‰é«˜åº¦/å“ˆå¸Œå›æ”¾ï¼‰ã€‚
	_ = args

	if m.ispcCoordinator == nil {
		return nil, NewInternalError("ISPC coordinator not available", nil)
	}

	// === 3. è§£æâ€œtoâ€å‚æ•°ï¼šè¿™é‡Œè¦æ±‚ä¸ºåˆçº¦ content_hashï¼ˆ32å­—èŠ‚ï¼‰
	//
	// è¯´æ˜ï¼š
	// - WES çš„åˆçº¦â€œåœ°å€â€(hash160(content_hash))æ— æ³•åæŸ¥å› content_hashï¼›
	// - ISPC æ‰§è¡Œå…¥å£éœ€è¦ contractHashï¼ˆå³ content_hashï¼‰ï¼›
	// å› æ­¤ wes_call çš„ to å­—æ®µåœ¨æœ¬å®ç°ä¸­å®šä¹‰ä¸º content_hashï¼ˆ0x + 64hex æˆ– 64hexï¼‰ã€‚
	toHex := strings.TrimPrefix(strings.TrimPrefix(contractAddr, "0x"), "0X")
	contractHash, err := hex.DecodeString(toHex)
	if err != nil || len(contractHash) != 32 {
		return nil, NewInvalidParamsError("wes_call requires `to` to be contract content_hash (32 bytes hex), not contract address", nil)
	}

	// === 4. è§£æ fromï¼ˆå¯é€‰ï¼‰ï¼šæ”¯æŒ Base58 WES åœ°å€æˆ– 20å­—èŠ‚ hex
	callerAddrHex := "0000000000000000000000000000000000000000"
	if fromVal, exists := callData["from"]; exists && fromVal != nil {
		if fromStr, ok := fromVal.(string); ok && fromStr != "" {
			// 1) 20å­—èŠ‚hexï¼ˆ0x + 40hexï¼‰
			fromHex := strings.TrimPrefix(strings.TrimPrefix(fromStr, "0x"), "0X")
			if raw, decodeErr := hex.DecodeString(fromHex); decodeErr == nil && len(raw) == 20 {
				callerAddrHex = hex.EncodeToString(raw)
			} else {
				// 2) Base58 åœ°å€
				if m.addressManager == nil {
					return nil, NewInternalError("address manager not available", nil)
				}
				addr, convErr := m.addressManager.StringToAddress(fromStr)
				if convErr != nil {
					return nil, NewInvalidParamsError(fmt.Sprintf("invalid from address: %v", convErr), nil)
				}
				addrBytes, convErr := m.addressManager.AddressToBytes(addr)
				if convErr != nil {
					return nil, NewInvalidParamsError(fmt.Sprintf("invalid from address: %v", convErr), nil)
				}
				callerAddrHex = hex.EncodeToString(addrBytes)
			}
		}
	}

	// === 5. è§£æ dataï¼šæ”¯æŒä¸‰ç§å½¢å¼
	// - ç›´æ¥æ–¹æ³•åï¼š"Mint"
	// - JSON å­—ç¬¦ä¸²ï¼š{"method":"Mint","params":[1,2],"payload":"<base64|0xhex>"}
	// - 0x + hex(JSON bytes)
	type callSpec struct {
		Method  string   `json:"method"`
		Params  []uint64 `json:"params"`
		Payload string   `json:"payload,omitempty"`
	}

	methodName := strings.TrimSpace(functionData)
	var methodParams []uint64
	var payloadBytes []byte

	parsePayload := func(p string) ([]byte, error) {
		if p == "" {
			return nil, nil
		}
		// 0xhex
		if strings.HasPrefix(p, "0x") || strings.HasPrefix(p, "0X") {
			b, err := hex.DecodeString(strings.TrimPrefix(strings.TrimPrefix(p, "0x"), "0X"))
			if err != nil {
				return nil, err
			}
			return b, nil
		}
		// base64
		return base64.StdEncoding.DecodeString(p)
	}

	tryParseSpec := func(b []byte) bool {
		var spec callSpec
		if err := json.Unmarshal(b, &spec); err != nil {
			return false
		}
		if strings.TrimSpace(spec.Method) == "" {
			return false
		}
		methodName = strings.TrimSpace(spec.Method)
		methodParams = spec.Params
		if pb, err := parsePayload(spec.Payload); err == nil {
			payloadBytes = pb
		} else {
			// payload æä¾›ä½†æ— æ³•è§£æï¼šä½œä¸ºå‚æ•°é”™è¯¯è¿”å›
			payloadBytes = nil
		}
		return true
	}

	// 0xhex(JSON bytes)
	if strings.HasPrefix(methodName, "0x") || strings.HasPrefix(methodName, "0X") {
		if b, err := hex.DecodeString(strings.TrimPrefix(strings.TrimPrefix(methodName, "0x"), "0X")); err == nil {
			_ = tryParseSpec(b)
		}
	} else {
		// JSON string
		if strings.HasPrefix(strings.TrimSpace(methodName), "{") {
			_ = tryParseSpec([]byte(methodName))
		}
	}

	if methodName == "" {
		return nil, NewInvalidParamsError("missing method name in callData.data", nil)
	}

	// === 6. è°ƒç”¨ ISPC æ‰§è¡Œï¼ˆåªè¯»æ¨¡æ‹Ÿï¼šä¸æ„å»º/ç­¾å/æäº¤äº¤æ˜“ï¼‰
	execResult, err := m.ispcCoordinator.ExecuteWASMContract(
		ctx,
		contractHash,
		methodName,
		methodParams,
		payloadBytes,
		callerAddrHex,
	)
	if err != nil {
		m.logger.Warn("wes_call ExecuteWASMContract failed",
			zap.String("contract_hash", hex.EncodeToString(contractHash)),
			zap.String("method", methodName),
			zap.Error(err),
		)
		return nil, NewInternalError(fmt.Sprintf("execute contract: %v", err), nil)
	}

	// è¿”å›ç»“æ„ï¼šå°½é‡å¯¹é½"åªè¯»è°ƒç”¨"çš„é¢„æœŸï¼Œä¸æäº¤äº¤æ˜“ï¼Œä¸è¿”å› tx_hash
	resp := map[string]interface{}{
		"success":       true,
		"contract_hash": format.HashToHex(contractHash),
		"method":        methodName,
		"return_values": execResult.ReturnValues,
		"return_data":   hex.EncodeToString(execResult.ReturnData),
		"events":        execResult.Events,
	}
	return resp, nil
}
