package adapter

import (
	"context"
	"encoding/json"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"github.com/tetratelabs/wazero/api"

	"github.com/weisyn/v1/internal/core/ispc/testutil"
	ispcInterfaces "github.com/weisyn/v1/internal/core/ispc/interfaces"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxopb "github.com/weisyn/v1/pb/blockchain/utxo"
	blockpb "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
	"github.com/weisyn/v1/pkg/types"
	"google.golang.org/grpc"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ============================================================================
// WASMAdapteré«˜çº§æµ‹è¯• - æµ‹è¯•æ›´å¤šå®¿ä¸»å‡½æ•°
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç°æ›´å¤šå®¿ä¸»å‡½æ•°çš„ç¼ºé™·å’ŒBUG
//
// ============================================================================

// mockEUTXOQuery Mockçš„EUTXOQuery
type mockEUTXOQuery struct {
	utxos []*utxopb.UTXO
	err   error
}

func (m *mockEUTXOQuery) GetUTXO(ctx context.Context, outpoint *pb.OutPoint) (*utxopb.UTXO, error) {
	if m.err != nil {
		return nil, m.err
	}
	if len(m.utxos) > 0 {
		return m.utxos[0], nil
	}
	return nil, nil
}

func (m *mockEUTXOQuery) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxopb.UTXOCategory, includeSpent bool) ([]*utxopb.UTXO, error) {
	if m.err != nil {
		return nil, m.err
	}
	return m.utxos, nil
}

func (m *mockEUTXOQuery) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	return []byte("mock-state-root"), nil
}

func (m *mockEUTXOQuery) GetReferenceCount(ctx context.Context, outpoint *pb.OutPoint) (uint32, error) {
	return 0, nil
}

func (m *mockEUTXOQuery) GetSponsorPoolUTXOs(ctx context.Context, includeSpent bool) ([]*utxopb.UTXO, error) {
	return nil, nil
}

// createWASMAdapterWithEUTXOQuery åˆ›å»ºå¸¦EUTXOQueryçš„WASMAdapter
func createWASMAdapterWithEUTXOQuery(t *testing.T) (*WASMAdapter, *mockHostABIForWASM, *mockEUTXOQuery) {
	t.Helper()

	logger := testutil.NewTestLogger()
	hashManager := testutil.NewTestHashManager()
	mockABI := &mockHostABIForWASM{
		blockHeight:    100,
		blockTimestamp: 1234567890,
		chainID:        []byte("test-chain"),
		caller:         make([]byte, 20),
		contractAddr:   make([]byte, 20),
		txID:           make([]byte, 32),
		utxoExists:     true,
		resourceExists: true,
	}

	mockEUTXO := &mockEUTXOQuery{
		utxos: []*utxopb.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category:     utxopb.UTXOCategory_UTXO_CATEGORY_ASSET,
				OwnerAddress: make([]byte, 20),
				ContentStrategy: &utxopb.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "1000",
									},
								},
							},
						},
					},
				},
			},
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 1,
				},
				Category:     utxopb.UTXOCategory_UTXO_CATEGORY_ASSET,
				OwnerAddress: make([]byte, 20),
				ContentStrategy: &utxopb.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						Owner: make([]byte, 20),
						LockingConditions: []*pb.LockingCondition{
							{
								Condition: &pb.LockingCondition_ContractLock{
									ContractLock: &pb.ContractLock{
										ContractAddress: append([]byte(nil), mockABI.contractAddr...),
									},
								},
							},
						},
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_ContractToken{
									ContractToken: &pb.ContractTokenAsset{
										ContractAddress: append([]byte(nil), mockABI.contractAddr...),
										TokenIdentifier: &pb.ContractTokenAsset_FungibleClassId{
											FungibleClassId: []byte("token123"),
										},
										Amount: "1000",
									},
								},
							},
						},
					},
				},
			},
		},
	}

	mockExecCtx := createMockExecutionContext()

	adapter := NewWASMAdapter(
		logger,
		nil, // chainQuery
		nil, // blockQuery
		mockEUTXO, // eutxoQuery
		nil, // uresCAS
		nil, // txQuery
		nil, // resourceQuery
		nil, // txHashClient
		nil, // addressManager
		hashManager,
		nil, // txAdapter
		nil, // draftService
		func(ctx context.Context) ispcInterfaces.ExecutionContext {
			return mockExecCtx
		},
		nil, // buildTxFromDraft
		nil, // encodeTxReceipt
	)

	return adapter, mockABI, mockEUTXO
}

// TestWASMAdapter_QueryUTXOBalance æµ‹è¯•query_utxo_balanceå‡½æ•°
func TestWASMAdapter_QueryUTXOBalance(t *testing.T) {
	adapter, mockABI, _ := createWASMAdapterWithEUTXOQuery(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	queryBalance, ok := functions["query_utxo_balance"].(func(context.Context, api.Module, uint32, uint32, uint32) uint64)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// å†™å…¥åœ°å€åˆ°å†…å­˜
	addrPtr := uint32(1024)
	address := make([]byte, 20)
	address[0] = 0x12
	memory.Write(addrPtr, address)

	// è°ƒç”¨query_utxo_balanceï¼ˆæ— tokenIDï¼‰
	result := queryBalance(ctx, module, addrPtr, 0, 0)
	assert.Equal(t, uint64(1000), result, "åº”è¯¥è¿”å›ä½™é¢1000")
}

// TestWASMAdapter_QueryUTXOBalance_WithTokenID æµ‹è¯•å¸¦tokenIDçš„query_utxo_balance
func TestWASMAdapter_QueryUTXOBalance_WithTokenID(t *testing.T) {
	adapter, mockABI, _ := createWASMAdapterWithEUTXOQuery(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	queryBalance, ok := functions["query_utxo_balance"].(func(context.Context, api.Module, uint32, uint32, uint32) uint64)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// å†™å…¥åœ°å€å’ŒtokenIDåˆ°å†…å­˜
	addrPtr := uint32(1024)
	address := make([]byte, 20)
	memory.Write(addrPtr, address)

	tokenIDPtr := uint32(2048)
	tokenID := []byte("token123")
	memory.Write(tokenIDPtr, tokenID)

	result := queryBalance(ctx, module, addrPtr, tokenIDPtr, uint32(len(tokenID)))
	assert.Equal(t, uint64(1000), result, "åº”è¯¥è¿”å›ä½™é¢1000")
}

// TestWASMAdapter_UTXOLookup æµ‹è¯•utxo_lookupå‡½æ•°
func TestWASMAdapter_UTXOLookup(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	utxoLookup, ok := functions["utxo_lookup"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// å†™å…¥txIDåˆ°å†…å­˜
	txIDPtr := uint32(1024)
	txID := make([]byte, 32)
	txID[0] = 0x12
	memory.Write(txIDPtr, txID)

	// å†™å…¥è¾“å‡ºç¼“å†²åŒº
	outputPtr := uint32(2048)
	outputSize := uint32(1000)

	// è°ƒç”¨utxo_lookup
	result := utxoLookup(ctx, module, txIDPtr, 32, 0, outputPtr, outputSize)
	assert.Greater(t, result, uint32(0), "åº”è¯¥è¿”å›è¾“å‡ºå­—èŠ‚æ•°")
}

// TestWASMAdapter_UTXOLookup_BufferTooSmall æµ‹è¯•ç¼“å†²åŒºå¤ªå°
func TestWASMAdapter_UTXOLookup_BufferTooSmall(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	utxoLookup, ok := functions["utxo_lookup"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	txIDPtr := uint32(1024)
	txID := make([]byte, 32)
	memory.Write(txIDPtr, txID)

	// ä½¿ç”¨å¤ªå°çš„ç¼“å†²åŒº
	outputPtr := uint32(2048)
	outputSize := uint32(1) // å¤ªå°

	result := utxoLookup(ctx, module, txIDPtr, 32, 0, outputPtr, outputSize)
	assert.Equal(t, uint32(ErrBufferTooSmall), result, "ç¼“å†²åŒºå¤ªå°åº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_ResourceLookup æµ‹è¯•resource_lookupå‡½æ•°
func TestWASMAdapter_ResourceLookup(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	resourceLookup, ok := functions["resource_lookup"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// å†™å…¥contentHashåˆ°å†…å­˜
	hashPtr := uint32(1024)
	contentHash := make([]byte, 32)
	contentHash[0] = 0x12
	memory.Write(hashPtr, contentHash)

	// å†™å…¥èµ„æºç¼“å†²åŒº
	resourcePtr := uint32(2048)
	resourceSize := uint32(1000)

	result := resourceLookup(ctx, module, hashPtr, 32, resourcePtr, resourceSize)
	assert.Greater(t, result, uint32(0), "åº”è¯¥è¿”å›èµ„æºå­—èŠ‚æ•°")
}

// TestWASMAdapter_ResourceLookup_BufferTooSmall æµ‹è¯•ç¼“å†²åŒºå¤ªå°
func TestWASMAdapter_ResourceLookup_BufferTooSmall(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	resourceLookup, ok := functions["resource_lookup"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	hashPtr := uint32(1024)
	contentHash := make([]byte, 32)
	memory.Write(hashPtr, contentHash)

	resourcePtr := uint32(2048)
	resourceSize := uint32(1) // å¤ªå°

	result := resourceLookup(ctx, module, hashPtr, 32, resourcePtr, resourceSize)
	assert.Equal(t, uint32(ErrBufferTooSmall), result, "ç¼“å†²åŒºå¤ªå°åº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_SetReturnData æµ‹è¯•set_return_dataå‡½æ•°
func TestWASMAdapter_SetReturnData(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	mockExecCtx := createMockExecutionContext()
	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return mockExecCtx
	}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	setReturnData, ok := functions["set_return_data"].(func(context.Context, api.Module, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// å†™å…¥è¿”å›æ•°æ®åˆ°å†…å­˜
	dataPtr := uint32(1024)
	data := []byte("test_return_data")
	memory.Write(dataPtr, data)

	// è°ƒç”¨set_return_data
	result := setReturnData(ctx, module, dataPtr, uint32(len(data)))
	assert.Equal(t, uint32(0), result, "åº”è¯¥è¿”å›0ï¼ˆæˆåŠŸï¼‰")

	// éªŒè¯æ•°æ®è¢«è®¾ç½®
	returnData, err := mockExecCtx.GetReturnData()
	require.NoError(t, err)
	assert.Equal(t, data, returnData, "åº”è¯¥è®¾ç½®æ­£ç¡®çš„è¿”å›æ•°æ®")
}

// TestWASMAdapter_SetReturnData_NilExecutionContext æµ‹è¯•nil ExecutionContext
func TestWASMAdapter_SetReturnData_NilExecutionContext(t *testing.T) {
	adapter := createTestWASMAdapter(t)
	mockABI := &mockHostABIForWASM{}

	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return nil
	}

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)
	setReturnData, ok := functions["set_return_data"].(func(context.Context, api.Module, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	dataPtr := uint32(1024)
	data := []byte("test")
	memory.Write(dataPtr, data)

	result := setReturnData(ctx, module, dataPtr, uint32(len(data)))
	assert.Equal(t, uint32(1), result, "nil ExecutionContextåº”è¯¥è¿”å›1ï¼ˆå¤±è´¥ï¼‰")
}

// TestWASMAdapter_EmitEvent æµ‹è¯•emit_eventå‡½æ•°
func TestWASMAdapter_EmitEvent(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	mockExecCtx := createMockExecutionContext()
	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return mockExecCtx
	}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	emitEvent, ok := functions["emit_event"].(func(context.Context, api.Module, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// å†™å…¥äº‹ä»¶JSONåˆ°å†…å­˜
	eventPtr := uint32(1024)
	eventJSON := []byte(`{"type":"test_event","data":{"key":"value"}}`)
	memory.Write(eventPtr, eventJSON)

	// è°ƒç”¨emit_event
	result := emitEvent(ctx, module, eventPtr, uint32(len(eventJSON)))
	assert.Equal(t, uint32(0), result, "åº”è¯¥è¿”å›0ï¼ˆæˆåŠŸï¼‰")

	// éªŒè¯äº‹ä»¶è¢«æ·»åŠ 
	// æ³¨æ„ï¼šemit_eventçš„å®ç°ä¼šå°†Event.Typeå›ºå®šä¸º"contract_event"ï¼Œè€Œä¸æ˜¯ä»JSONä¸­è§£æ
	events, err := mockExecCtx.GetEvents()
	require.NoError(t, err)
	assert.Equal(t, 1, len(events), "åº”è¯¥æ·»åŠ 1ä¸ªäº‹ä»¶")
	assert.Equal(t, "contract_event", events[0].Type, "äº‹ä»¶ç±»å‹åº”è¯¥æ˜¯contract_event")
	assert.NotNil(t, events[0].Data, "äº‹ä»¶æ•°æ®ä¸åº”è¯¥ä¸ºnil")
}

// TestWASMAdapter_EmitEvent_InvalidJSON æµ‹è¯•æ— æ•ˆJSON
// æ³¨æ„ï¼šemit_eventçš„å®ç°ä¸ä¼šéªŒè¯JSONæœ‰æ•ˆæ€§ï¼Œå®ƒåªæ˜¯å°†JSONå­—ç¬¦ä¸²å­˜å‚¨åˆ°Event.Dataä¸­
// å› æ­¤æ— æ•ˆJSONä¹Ÿä¼šæˆåŠŸï¼Œè¿™æ˜¯å½“å‰å®ç°çš„è¡Œä¸º
func TestWASMAdapter_EmitEvent_InvalidJSON(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	mockExecCtx := createMockExecutionContext()
	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return mockExecCtx
	}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	emitEvent, ok := functions["emit_event"].(func(context.Context, api.Module, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// å†™å…¥æ— æ•ˆJSON
	eventPtr := uint32(1024)
	invalidJSON := []byte(`{invalid json}`)
	memory.Write(eventPtr, invalidJSON)

	// æ³¨æ„ï¼šemit_eventä¸ä¼šéªŒè¯JSONï¼Œæ‰€ä»¥å³ä½¿æ— æ•ˆJSONä¹Ÿä¼šæˆåŠŸ
	result := emitEvent(ctx, module, eventPtr, uint32(len(invalidJSON)))
	assert.Equal(t, uint32(0), result, "emit_eventä¸ä¼šéªŒè¯JSONæœ‰æ•ˆæ€§ï¼Œæ‰€ä»¥æ— æ•ˆJSONä¹Ÿä¼šæˆåŠŸ")
	
	// éªŒè¯äº‹ä»¶è¢«æ·»åŠ ï¼ˆå³ä½¿JSONæ— æ•ˆï¼‰
	events, err := mockExecCtx.GetEvents()
	require.NoError(t, err)
	assert.Equal(t, 1, len(events), "åº”è¯¥æ·»åŠ 1ä¸ªäº‹ä»¶ï¼ˆå³ä½¿JSONæ— æ•ˆï¼‰")
}

// createMockBuildTxFromDraft åˆ›å»ºMockçš„buildTxFromDraftå‡½æ•°
func createMockBuildTxFromDraft() func(context.Context, interface{}, transaction.TransactionHashServiceClient, persistence.UTXOQuery, []byte, []byte, []byte, uint64, uint64) (*TxReceipt, error) {
	return func(ctx context.Context, txAdapter interface{}, txHashClient transaction.TransactionHashServiceClient, eutxoQuery persistence.UTXOQuery, callerAddress []byte, contractAddress []byte, draftJSON []byte, blockHeight uint64, blockTimestamp uint64) (*TxReceipt, error) {
		return &TxReceipt{
			Mode: "normal",
		}, nil
	}
}

// createMockEncodeTxReceipt åˆ›å»ºMockçš„encodeTxReceiptå‡½æ•°
func createMockEncodeTxReceipt() func(*TxReceipt) ([]byte, error) {
	return func(receipt *TxReceipt) ([]byte, error) {
		return json.Marshal(receipt)
	}
}

// createWASMAdapterWithBuildTx åˆ›å»ºå¸¦buildTxFromDraftçš„WASMAdapter
func createWASMAdapterWithBuildTx(t *testing.T) (*WASMAdapter, *mockHostABIForWASM) {
	t.Helper()

	logger := testutil.NewTestLogger()
	hashManager := testutil.NewTestHashManager()
	mockABI := &mockHostABIForWASM{
		blockHeight:    100,
		blockTimestamp: 1234567890,
		chainID:        []byte("test-chain"),
		caller:         make([]byte, 20),
		contractAddr:   make([]byte, 20),
		txID:           make([]byte, 32),
		utxoExists:     true,
		resourceExists: true,
	}

	mockExecCtx := createMockExecutionContext()

	adapter := NewWASMAdapter(
		logger,
		nil, // chainQuery
		nil, // blockQuery
		nil, // eutxoQuery
		nil, // uresCAS
		nil, // txQuery
		nil, // resourceQuery
		nil, // txHashClient
		nil, // addressManager
		hashManager,
		&mockTxAdapter{}, // txAdapter
		nil,              // draftService
		func(ctx context.Context) ispcInterfaces.ExecutionContext {
			return mockExecCtx
		},
		createMockBuildTxFromDraft(), // buildTxFromDraft
		createMockEncodeTxReceipt(),  // encodeTxReceipt
	)

	return adapter, mockABI
}

// mockTxAdapter Mockçš„TxAdapter
type mockTxAdapter struct{}

func (m *mockTxAdapter) FinalizeTransaction(ctx context.Context, draft interface{}) (*TxReceipt, error) {
	return &TxReceipt{Mode: "normal"}, nil
}

func (m *mockTxAdapter) CleanupDraft(ctx context.Context, draftID string) error {
	return nil
}

// TestWASMAdapter_HostBuildTransaction æµ‹è¯•host_build_transactionå‡½æ•°
func TestWASMAdapter_HostBuildTransaction(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithBuildTx(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	buildTx, ok := functions["host_build_transaction"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	// å†™å…¥Draft JSONåˆ°å†…å­˜
	draftPtr := uint32(1024)
	draftJSON := []byte(`{"inputs":[],"outputs":[]}`)
	memory.Write(draftPtr, draftJSON)

	// å†™å…¥Receiptç¼“å†²åŒº
	receiptPtr := uint32(2048)
	receiptSize := uint32(1000)

	// è°ƒç”¨host_build_transaction
	result := buildTx(ctx, module, draftPtr, uint32(len(draftJSON)), receiptPtr, receiptSize)
	assert.Equal(t, uint32(0), result, "åº”è¯¥è¿”å›0ï¼ˆæˆåŠŸï¼‰")

	// éªŒè¯Receiptè¢«å†™å…¥
	receiptBytes, ok := memory.Read(receiptPtr, 100)
	require.True(t, ok)
	assert.Greater(t, len(receiptBytes), 0, "åº”è¯¥å†™å…¥Receipt JSON")
}

// TestWASMAdapter_HostBuildTransaction_BufferTooSmall æµ‹è¯•ç¼“å†²åŒºå¤ªå°
func TestWASMAdapter_HostBuildTransaction_BufferTooSmall(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithBuildTx(t)
	ctx := context.Background()

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	buildTx, ok := functions["host_build_transaction"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	draftPtr := uint32(1024)
	draftJSON := []byte(`{"inputs":[],"outputs":[]}`)
	memory.Write(draftPtr, draftJSON)

	receiptPtr := uint32(2048)
	receiptSize := uint32(1) // å¤ªå°

	result := buildTx(ctx, module, draftPtr, uint32(len(draftJSON)), receiptPtr, receiptSize)
	assert.Equal(t, uint32(ErrBufferTooSmall), result, "ç¼“å†²åŒºå¤ªå°åº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_HostBuildTransaction_NilTxAdapter æµ‹è¯•nil TxAdapter
func TestWASMAdapter_HostBuildTransaction_NilTxAdapter(t *testing.T) {
	adapter := createTestWASMAdapter(t)
	mockABI := &mockHostABIForWASM{}

	adapter.txAdapter = nil

	ctx := context.Background()
	functions := adapter.BuildHostFunctions(ctx, mockABI)
	buildTx, ok := functions["host_build_transaction"].(func(context.Context, api.Module, uint32, uint32, uint32, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	draftPtr := uint32(1024)
	draftJSON := []byte(`{"inputs":[]}`)
	memory.Write(draftPtr, draftJSON)

	result := buildTx(ctx, module, draftPtr, uint32(len(draftJSON)), 2048, 1000)
	assert.Equal(t, uint32(ErrServiceUnavailable), result, "nil TxAdapteråº”è¯¥è¿”å›é”™è¯¯")
}

// TestWASMAdapter_GetBlockHash æµ‹è¯•get_block_hashå‡½æ•°
func TestWASMAdapter_GetBlockHash(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	// éœ€è¦è®¾ç½®blockQuery
	adapter.blockQuery = &mockBlockQuery{}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getBlockHash, ok := functions["get_block_hash"].(func(context.Context, api.Module, uint64, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	hashPtr := uint32(1024)
	result := getBlockHash(ctx, module, 100, hashPtr)
	assert.Equal(t, uint32(32), result, "åº”è¯¥è¿”å›32ï¼ˆåŒºå—å“ˆå¸Œé•¿åº¦ï¼‰")

	// éªŒè¯å“ˆå¸Œè¢«å†™å…¥
	hashBytes, ok := memory.Read(hashPtr, 32)
	require.True(t, ok)
	assert.Equal(t, 32, len(hashBytes), "åº”è¯¥å†™å…¥32å­—èŠ‚å“ˆå¸Œ")
}

// mockBlockQuery Mockçš„BlockQuery
type mockBlockQuery struct{}

func (m *mockBlockQuery) GetBlockByHeight(ctx context.Context, height uint64) (*blockpb.Block, error) {
	return &blockpb.Block{
		Header: &blockpb.BlockHeader{},
	}, nil
}

func (m *mockBlockQuery) GetBlockByHash(ctx context.Context, hash []byte) (*blockpb.Block, error) {
	return &blockpb.Block{
		Header: &blockpb.BlockHeader{},
	}, nil
}

func (m *mockBlockQuery) GetBlockHeader(ctx context.Context, blockHash []byte) (*blockpb.BlockHeader, error) {
	return &blockpb.BlockHeader{}, nil
}

func (m *mockBlockQuery) GetBlockRange(ctx context.Context, startHeight uint64, endHeight uint64) ([]*blockpb.Block, error) {
	return nil, nil
}

func (m *mockBlockQuery) GetHighestBlock(ctx context.Context) (uint64, []byte, error) {
	return 100, make([]byte, 32), nil
}

// TestWASMAdapter_GetTransactionID æµ‹è¯•get_transaction_idå‡½æ•°
func TestWASMAdapter_GetTransactionID(t *testing.T) {
	adapter, mockABI := createWASMAdapterWithMock(t)
	ctx := context.Background()

	// éœ€è¦è®¾ç½®draftServiceå’ŒtxHashClient
	adapter.draftService = &mockDraftServiceForAdapter{}
	adapter.txHashClient = &mockTxHashServiceClientForAdapter{}
	adapter.hashManager = testutil.NewTestHashManager()

	mockExecCtx := createMockExecutionContext()
	mockExecCtx.draftID = "draft-123"
	adapter.getExecCtxFunc = func(ctx context.Context) ispcInterfaces.ExecutionContext {
		return mockExecCtx
	}

	functions := adapter.BuildHostFunctions(ctx, mockABI)
	getTxID, ok := functions["get_transaction_id"].(func(context.Context, api.Module, uint32) uint32)
	require.True(t, ok)

	module, cleanup := createWazeroModule(t, functions)
	defer cleanup()

	memory := module.Memory()
	require.NotNil(t, memory)

	txIDPtr := uint32(1024)
	result := getTxID(ctx, module, txIDPtr)
	assert.Equal(t, uint32(32), result, "åº”è¯¥è¿”å›32ï¼ˆäº¤æ˜“IDé•¿åº¦ï¼‰")

	// éªŒè¯äº¤æ˜“IDè¢«å†™å…¥
	txIDBytes, ok := memory.Read(txIDPtr, 32)
	require.True(t, ok)
	assert.Equal(t, 32, len(txIDBytes), "åº”è¯¥å†™å…¥32å­—èŠ‚äº¤æ˜“ID")
}

// mockDraftServiceForAdapter Mockçš„DraftService
type mockDraftServiceForAdapter struct{}

func (m *mockDraftServiceForAdapter) CreateDraft(ctx context.Context) (*types.DraftTx, error) {
	return &types.DraftTx{
		DraftID: "draft-123",
		Tx:      &pb.Transaction{},
	}, nil
}

func (m *mockDraftServiceForAdapter) LoadDraft(ctx context.Context, draftID string) (*types.DraftTx, error) {
	return &types.DraftTx{
		DraftID: draftID,
		Tx:      &pb.Transaction{},
	}, nil
}

func (m *mockDraftServiceForAdapter) SaveDraft(ctx context.Context, draft *types.DraftTx) error {
	return nil
}

func (m *mockDraftServiceForAdapter) GetDraftByID(ctx context.Context, draftID string) (*types.DraftTx, error) {
	return &types.DraftTx{
		DraftID: draftID,
		Tx:      &pb.Transaction{},
	}, nil
}

func (m *mockDraftServiceForAdapter) ValidateDraft(ctx context.Context, draft *types.DraftTx) error {
	return nil
}

func (m *mockDraftServiceForAdapter) SealDraft(ctx context.Context, draft *types.DraftTx) (*types.ComposedTx, error) {
	return nil, nil
}

func (m *mockDraftServiceForAdapter) DeleteDraft(ctx context.Context, draftID string) error {
	return nil
}

func (m *mockDraftServiceForAdapter) AddInput(ctx context.Context, draft *types.DraftTx, outpoint *pb.OutPoint, isReferenceOnly bool, unlockingProof *pb.UnlockingProof) (uint32, error) {
	return 0, nil
}

func (m *mockDraftServiceForAdapter) AddAssetOutput(ctx context.Context, draft *types.DraftTx, owner []byte, amount string, tokenID []byte, lockingConditions []*pb.LockingCondition) (uint32, error) {
	return 0, nil
}

func (m *mockDraftServiceForAdapter) AddResourceOutput(ctx context.Context, draft *types.DraftTx, contentHash []byte, category string, owner []byte, lockingConditions []*pb.LockingCondition, metadata []byte) (uint32, error) {
	return 0, nil
}

func (m *mockDraftServiceForAdapter) AddStateOutput(ctx context.Context, draft *types.DraftTx, stateID []byte, stateVersion uint64, executionResultHash []byte, publicInputs []byte, parentStateHash []byte) (uint32, error) {
	return 0, nil
}

// mockTxHashServiceClientForAdapter Mockçš„TransactionHashServiceClient
type mockTxHashServiceClientForAdapter struct{}

func (m *mockTxHashServiceClientForAdapter) ComputeHash(ctx context.Context, in *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	return &transaction.ComputeHashResponse{
		Hash: make([]byte, 32),
	}, nil
}

func (m *mockTxHashServiceClientForAdapter) ValidateHash(ctx context.Context, in *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	return &transaction.ValidateHashResponse{
		IsValid: true,
	}, nil
}

func (m *mockTxHashServiceClientForAdapter) ComputeSignatureHash(ctx context.Context, in *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	return &transaction.ComputeSignatureHashResponse{
		Hash: make([]byte, 32),
	}, nil
}

func (m *mockTxHashServiceClientForAdapter) ValidateSignatureHash(ctx context.Context, in *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	return &transaction.ValidateSignatureHashResponse{
		IsValid: true,
	}, nil
}

