package hostabi

import (
	"context"
	"encoding/json"
	"testing"

	"github.com/stretchr/testify/assert"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/types"
	"google.golang.org/grpc"
)

// ============================================================================
// host_build_transaction.go æ ¸å¿ƒä¸šåŠ¡é€»è¾‘æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç°æ ¸å¿ƒä¸šåŠ¡é€»è¾‘çš„ç¼ºé™·å’ŒBUGï¼Œç‰¹åˆ«æ˜¯ç®€åŒ–å®ç°
//
// ============================================================================

// TestProcessIntent_Transfer æµ‹è¯•å¤„ç†è½¬è´¦æ„å›¾
func TestProcessIntent_Transfer(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	draftHandle := int32(1)

	transferParams := TransferIntent{
		From:    "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		To:      "beefdeadbeefdeadbeefdeadbeefdeadbeefdead",
		Amount:  "1000",
		TokenID: "",
	}
	paramsJSON, _ := json.Marshal(transferParams)
	intent := Intent{
		Type:   "transfer",
		Params: paramsJSON,
	}

	err := processIntent(ctx, mockTxAdapter, draftHandle, intent)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸå¤„ç†è½¬è´¦æ„å›¾")
	assert.Equal(t, 1, mockTxAdapter.addTransferCallCount, "åº”è¯¥è°ƒç”¨AddTransfer")
}

// TestProcessIntent_InvalidType æµ‹è¯•ä¸æ”¯æŒçš„æ„å›¾ç±»å‹
func TestProcessIntent_InvalidType(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	draftHandle := int32(1)

	intent := Intent{
		Type:   "invalid_type",
		Params: []byte("{}"),
	}

	err := processIntent(ctx, mockTxAdapter, draftHandle, intent)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "ä¸æ”¯æŒçš„æ„å›¾ç±»å‹", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestProcessIntent_InvalidParams æµ‹è¯•æ— æ•ˆå‚æ•°
func TestProcessIntent_InvalidParams(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	draftHandle := int32(1)

	intent := Intent{
		Type:   "transfer",
		Params: []byte("invalid json"),
	}

	err := processIntent(ctx, mockTxAdapter, draftHandle, intent)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "è§£æè½¬è´¦æ„å›¾å‚æ•°å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplySignModeLogic_DeferSign æµ‹è¯•defer_signæ¨¡å¼ï¼ˆæ— éœ€ç‰¹æ®Šå¤„ç†ï¼‰
func TestApplySignModeLogic_DeferSign(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	draftHandle := int32(1)
	draft := &DraftJSON{
		SignMode: "defer_sign",
	}

	err := applySignModeLogic(ctx, mockTxAdapter, nil, nil, draftHandle, draft, 100)

	assert.NoError(t, err, "defer_signæ¨¡å¼åº”è¯¥æ— éœ€ç‰¹æ®Šå¤„ç†")
}

// TestApplySignModeLogic_Delegated æµ‹è¯•delegatedæ¨¡å¼
func TestApplySignModeLogic_Delegated(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	draftHandle := int32(1)
	callerAddress := make([]byte, 20)
	draft := &DraftJSON{
		SignMode: "delegated",
		Metadata: Metadata{
			DelegationParams: &DelegationParams{
				OriginalOwner:        "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
				AllowedDelegates:     []string{"beefdeadbeefdeadbeefdeadbeefdeadbeefdead"},
				AuthorizedOperations: []string{"transfer"},
				ExpiryDurationBlocks: 100,
				MaxValuePerOperation: "1000",
			},
		},
	}

	err := applySignModeLogic(ctx, mockTxAdapter, nil, callerAddress, draftHandle, draft, 100)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸåº”ç”¨å§”æ‰˜é”å®š")
}

// TestApplySignModeLogic_Delegated_MissingParams æµ‹è¯•delegatedæ¨¡å¼ç¼ºå°‘å‚æ•°
func TestApplySignModeLogic_Delegated_MissingParams(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	draftHandle := int32(1)
	callerAddress := make([]byte, 20)
	draft := &DraftJSON{
		SignMode: "delegated",
		// ç¼ºå°‘DelegationParams
	}

	err := applySignModeLogic(ctx, mockTxAdapter, nil, callerAddress, draftHandle, draft, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "delegatedæ¨¡å¼éœ€è¦æä¾›delegation_params", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplySignModeLogic_Threshold æµ‹è¯•thresholdæ¨¡å¼
func TestApplySignModeLogic_Threshold(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	draftHandle := int32(1)
	// ä½¿ç”¨æœ‰æ•ˆçš„åå…­è¿›åˆ¶å­—ç¬¦ä¸²ä½œä¸ºéªŒè¯å¯†é’¥
	key1 := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	key2 := "beefdeadbeefdeadbeefdeadbeefdeadbeefdead"
	key3 := "feedbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	draft := &DraftJSON{
		SignMode: "threshold",
		Metadata: Metadata{
			ThresholdParams: &ThresholdParams{
				Threshold:              2,
				TotalParties:           3,
				PartyVerificationKeys:  []string{key1, key2, key3},
				SignatureScheme:       "BLS_THRESHOLD",
				SecurityLevel:          256,
			},
		},
	}

	err := applySignModeLogic(ctx, mockTxAdapter, nil, nil, draftHandle, draft, 100)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸåº”ç”¨é—¨é™é”å®š")
}

// TestApplySignModeLogic_Threshold_MissingParams æµ‹è¯•thresholdæ¨¡å¼ç¼ºå°‘å‚æ•°
func TestApplySignModeLogic_Threshold_MissingParams(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	draftHandle := int32(1)
	draft := &DraftJSON{
		SignMode: "threshold",
		// ç¼ºå°‘ThresholdParams
	}

	err := applySignModeLogic(ctx, mockTxAdapter, nil, nil, draftHandle, draft, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "thresholdæ¨¡å¼éœ€è¦æä¾›threshold_params", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplySignModeLogic_Paymaster æµ‹è¯•paymasteræ¨¡å¼ï¼ˆæ£€æŸ¥ä¿®å¤åçš„UTXOé€‰æ‹©ï¼‰
func TestApplySignModeLogic_Paymaster(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "200", // é‡‘é¢è¶³å¤Ÿæ”¯ä»˜è´¹ç”¨100
									},
								},
							},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()
	draftHandle := int32(1)
	draft := &DraftJSON{
		SignMode: "paymaster",
		Metadata: Metadata{
			PaymasterParams: &PaymasterParams{
				FeeAmount: "100",
				TokenID:   "",
				MinerAddr: "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
			},
		},
	}

	err := applySignModeLogic(ctx, mockTxAdapter, mockUTXOQuery, nil, draftHandle, draft, 100)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸåº”ç”¨ä»£ä»˜é€»è¾‘")
	assert.Equal(t, 1, mockTxAdapter.addCustomInputCallCount, "åº”è¯¥æ·»åŠ èµåŠ©æ± è¾“å…¥")
	assert.Equal(t, 1, mockTxAdapter.addCustomOutputCallCount, "åº”è¯¥æ·»åŠ è´¹ç”¨è¾“å‡º")
	
	// âœ… ä¿®å¤åçš„å®ç°ï¼šæŒ‰é‡‘é¢é€‰æ‹©UTXOï¼ˆé€‰æ‹©é‡‘é¢ >= æ‰€éœ€è´¹ç”¨çš„ç¬¬ä¸€ä¸ªUTXOï¼‰
	t.Logf("âœ… å·²ä¿®å¤ï¼šapplyPaymaster ç°åœ¨æŒ‰é‡‘é¢é€‰æ‹©UTXOï¼Œé€‰æ‹©é‡‘é¢ >= æ‰€éœ€è´¹ç”¨çš„ç¬¬ä¸€ä¸ªUTXO")
}

// TestApplySignModeLogic_Paymaster_MissingParams æµ‹è¯•paymasteræ¨¡å¼ç¼ºå°‘å‚æ•°
func TestApplySignModeLogic_Paymaster_MissingParams(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	ctx := context.Background()
	draftHandle := int32(1)
	draft := &DraftJSON{
		SignMode: "paymaster",
		// ç¼ºå°‘PaymasterParams
	}

	err := applySignModeLogic(ctx, mockTxAdapter, nil, nil, draftHandle, draft, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "paymasteræ¨¡å¼éœ€è¦æä¾›paymaster_params", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestApplySignModeLogic_Paymaster_NoUTXOs æµ‹è¯•paymasteræ¨¡å¼æ²¡æœ‰å¯ç”¨UTXO
func TestApplySignModeLogic_Paymaster_NoUTXOs(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{}, // ç©ºåˆ—è¡¨
	}
	ctx := context.Background()
	draftHandle := int32(1)
	draft := &DraftJSON{
		SignMode: "paymaster",
		Metadata: Metadata{
			PaymasterParams: &PaymasterParams{
				FeeAmount: "100",
			},
		},
	}

	err := applySignModeLogic(ctx, mockTxAdapter, mockUTXOQuery, nil, draftHandle, draft, 100)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Contains(t, err.Error(), "èµåŠ©æ± ä¸­æ²¡æœ‰å¯ç”¨çš„UTXO", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestRouteBySignMode_DeferSign æµ‹è¯•defer_signæ¨¡å¼è·¯ç”±
func TestRouteBySignMode_DeferSign(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true, // è®¾ç½®ä¸ºtrueï¼Œè¡¨ç¤ºäº¤æ˜“ç»“æ„æœ‰æ•ˆ
	}
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{
		Inputs: []*transaction.TxInput{
			{},
		},
		Outputs: []*transaction.TxOutput{
			{},
		},
	}

	receipt, err := routeBySignMode(ctx, mockTxHashClient, "defer_sign", unsignedTx)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè·¯ç”±")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "unsigned", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
	assert.NotEmpty(t, receipt.UnsignedTxHash, "åº”è¯¥åŒ…å«äº¤æ˜“å“ˆå¸Œ")
	// SerializedTx å¯èƒ½ä¸ºç©ºï¼ˆå¦‚æœprotobufåºåˆ—åŒ–ç©ºäº¤æ˜“è¿”å›ç©ºå­—èŠ‚æ•°ç»„ï¼‰
	// ä½†è‡³å°‘åº”è¯¥å­˜åœ¨ï¼ˆå³ä½¿æ˜¯ç©ºå­—ç¬¦ä¸²ï¼‰
	assert.NotNil(t, receipt.SerializedTx, "åº”è¯¥åŒ…å«åºåˆ—åŒ–äº¤æ˜“å­—æ®µ")
}

// TestRouteBySignMode_DeferSign_NilClient æµ‹è¯•defer_signæ¨¡å¼nilå®¢æˆ·ç«¯
func TestRouteBySignMode_DeferSign_NilClient(t *testing.T) {
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{}

	receipt, err := routeBySignMode(ctx, nil, "defer_sign", unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "transaction hash client is not initialized", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestRouteBySignMode_Delegated æµ‹è¯•delegatedæ¨¡å¼è·¯ç”±
func TestRouteBySignMode_Delegated(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{}

	receipt, err := routeBySignMode(ctx, mockTxHashClient, "delegated", unsignedTx)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè·¯ç”±")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "delegated", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
}

// TestRouteBySignMode_Threshold æµ‹è¯•thresholdæ¨¡å¼è·¯ç”±
func TestRouteBySignMode_Threshold(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{}

	receipt, err := routeBySignMode(ctx, mockTxHashClient, "threshold", unsignedTx)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè·¯ç”±")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "threshold", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
}

// TestRouteBySignMode_Paymaster æµ‹è¯•paymasteræ¨¡å¼è·¯ç”±
func TestRouteBySignMode_Paymaster(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{}

	receipt, err := routeBySignMode(ctx, mockTxHashClient, "paymaster", unsignedTx)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸè·¯ç”±")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "paymaster", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
}

// TestRouteBySignMode_InvalidMode æµ‹è¯•æ— æ•ˆç­¾åæ¨¡å¼
func TestRouteBySignMode_InvalidMode(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{}

	receipt, err := routeBySignMode(ctx, mockTxHashClient, "invalid_mode", unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "æœªçŸ¥çš„ç­¾åæ¨¡å¼", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestHandleDelegatedMode_Success æµ‹è¯•å¤„ç†å§”æ‰˜æ¨¡å¼æˆåŠŸ
func TestHandleDelegatedMode_Success(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{}

	receipt, err := handleDelegatedMode(ctx, mockTxHashClient, unsignedTx)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸå¤„ç†")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "delegated", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
	assert.NotEmpty(t, receipt.UnsignedTxHash, "åº”è¯¥åŒ…å«äº¤æ˜“å“ˆå¸Œ")
}

// TestHandleDelegatedMode_NilClient æµ‹è¯•nilå®¢æˆ·ç«¯
func TestHandleDelegatedMode_NilClient(t *testing.T) {
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{}

	receipt, err := handleDelegatedMode(ctx, nil, unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
}

// TestHandleThresholdMode_Success æµ‹è¯•å¤„ç†é—¨é™æ¨¡å¼æˆåŠŸ
func TestHandleThresholdMode_Success(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{}

	receipt, err := handleThresholdMode(ctx, mockTxHashClient, unsignedTx)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸå¤„ç†")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "threshold", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
}

// TestHandlePaymasterMode_Success æµ‹è¯•å¤„ç†ä»£ä»˜æ¨¡å¼æˆåŠŸ
func TestHandlePaymasterMode_Success(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()
	unsignedTx := &transaction.Transaction{}

	receipt, err := handlePaymasterMode(ctx, mockTxHashClient, unsignedTx)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸå¤„ç†")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "paymaster", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
}

// ============================================================================
// Mockå¯¹è±¡å®šä¹‰
// ============================================================================

// mockTxAdapterForBuildTransaction Mockçš„TxAdapterï¼ˆç”¨äºæ„å»ºäº¤æ˜“æµ‹è¯•ï¼‰
type mockTxAdapterForBuildTransaction struct {
	beginTransactionCallCount int
	addTransferCallCount      int
	addCustomInputCallCount   int
	addCustomOutputCallCount  int
	getDraftCallCount         int
	finalizeTransactionCallCount int
	cleanupDraftCallCount     int
	
	beginTransactionError     error
	addTransferError          error
	addCustomInputError       error
	addCustomOutputError      error
	getDraftError             error
	finalizeTransactionError  error
	cleanupDraftError         error
	
	draftHandle               int32
	draft                     *types.DraftTx
	finalizedTx               *transaction.Transaction
}

func (m *mockTxAdapterForBuildTransaction) BeginTransaction(ctx context.Context, blockHeight uint64, blockTimestamp uint64) (int32, error) {
	m.beginTransactionCallCount++
	if m.beginTransactionError != nil {
		return 0, m.beginTransactionError
	}
	m.draftHandle = 1
	return m.draftHandle, nil
}

func (m *mockTxAdapterForBuildTransaction) AddTransfer(ctx context.Context, draftHandle int32, from []byte, to []byte, amount string, tokenID []byte) (int32, error) {
	m.addTransferCallCount++
	if m.addTransferError != nil {
		return 0, m.addTransferError
	}
	return 1, nil
}

func (m *mockTxAdapterForBuildTransaction) AddCustomInput(ctx context.Context, draftHandle int32, outpoint *transaction.OutPoint, isReferenceOnly bool) (int32, error) {
	m.addCustomInputCallCount++
	if m.addCustomInputError != nil {
		return 0, m.addCustomInputError
	}
	return 0, nil
}

func (m *mockTxAdapterForBuildTransaction) AddCustomOutput(ctx context.Context, draftHandle int32, output *transaction.TxOutput) (int32, error) {
	m.addCustomOutputCallCount++
	if m.addCustomOutputError != nil {
		return 0, m.addCustomOutputError
	}
	return 0, nil
}

func (m *mockTxAdapterForBuildTransaction) GetDraft(ctx context.Context, draftHandle int32) (*types.DraftTx, error) {
	m.getDraftCallCount++
	if m.getDraftError != nil {
		return nil, m.getDraftError
	}
	if m.draft == nil {
		m.draft = &types.DraftTx{
			DraftID: "draft-123",
			Tx: &transaction.Transaction{
				Inputs:  []*transaction.TxInput{},
				Outputs: []*transaction.TxOutput{},
			},
		}
	}
	return m.draft, nil
}

func (m *mockTxAdapterForBuildTransaction) FinalizeTransaction(ctx context.Context, draftHandle int32) (*transaction.Transaction, error) {
	m.finalizeTransactionCallCount++
	if m.finalizeTransactionError != nil {
		return nil, m.finalizeTransactionError
	}
	if m.finalizedTx == nil {
		m.finalizedTx = &transaction.Transaction{
			Inputs:  []*transaction.TxInput{},
			Outputs: []*transaction.TxOutput{},
		}
	}
	return m.finalizedTx, nil
}

func (m *mockTxAdapterForBuildTransaction) CleanupDraft(ctx context.Context, draftHandle int32) error {
	m.cleanupDraftCallCount++
	if m.cleanupDraftError != nil {
		return m.cleanupDraftError
	}
	return nil
}

// mockUTXOQueryForPaymaster Mockçš„UTXOæŸ¥è¯¢æœåŠ¡ï¼ˆç”¨äºpaymasteræµ‹è¯•ï¼‰
type mockUTXOQueryForPaymaster struct {
	sponsorUTXOs []*utxo.UTXO
	queryError   error
}

func (m *mockUTXOQueryForPaymaster) GetUTXO(ctx context.Context, outpoint *pb.OutPoint) (*utxo.UTXO, error) {
	return nil, nil
}

func (m *mockUTXOQueryForPaymaster) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return nil, nil
}

func (m *mockUTXOQueryForPaymaster) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxo.UTXO, error) {
	if m.queryError != nil {
		return nil, m.queryError
	}
	return m.sponsorUTXOs, nil
}

func (m *mockUTXOQueryForPaymaster) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	return nil, nil
}

// mockTxHashServiceClient Mockçš„äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
type mockTxHashServiceClient struct {
	hash    []byte
	isValid bool
	err     error
}

func (m *mockTxHashServiceClient) ComputeHash(ctx context.Context, in *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	if m.err != nil {
		return nil, m.err
	}
	if m.hash == nil {
		m.hash = make([]byte, 32)
	}
	return &transaction.ComputeHashResponse{
		Hash:    m.hash,
		IsValid: m.isValid,
	}, nil
}

func (m *mockTxHashServiceClient) ValidateHash(ctx context.Context, in *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	return nil, nil
}

func (m *mockTxHashServiceClient) ComputeSignatureHash(ctx context.Context, in *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	return nil, nil
}

func (m *mockTxHashServiceClient) ValidateSignatureHash(ctx context.Context, in *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	return nil, nil
}

