package hostabi

import (
	"context"
	"testing"

	"github.com/stretchr/testify/assert"

	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
)

// ============================================================================
// BuildTransactionFromDraft ç«¯åˆ°ç«¯æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç° BuildTransactionFromDraft çš„ç¼ºé™·å’ŒBUG
//
// ============================================================================

// TestBuildTransactionFromDraft_DeferSign_Success æµ‹è¯•defer_signæ¨¡å¼æˆåŠŸæ„å»º
func TestBuildTransactionFromDraft_DeferSign_Success(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"inputs": [{"tx_hash": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "output_index": 0}],
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "unsigned", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
	assert.NotEmpty(t, receipt.UnsignedTxHash, "åº”è¯¥åŒ…å«äº¤æ˜“å“ˆå¸Œ")
	assert.Equal(t, 1, mockTxAdapter.beginTransactionCallCount, "åº”è¯¥è°ƒç”¨BeginTransaction")
	assert.Equal(t, 1, mockTxAdapter.addCustomInputCallCount, "åº”è¯¥æ·»åŠ è¾“å…¥")
	assert.Equal(t, 1, mockTxAdapter.addCustomOutputCallCount, "åº”è¯¥æ·»åŠ è¾“å‡º")
	assert.Equal(t, 1, mockTxAdapter.finalizeTransactionCallCount, "åº”è¯¥Finalizeäº¤æ˜“")
}

// TestBuildTransactionFromDraft_Delegated_Success æµ‹è¯•delegatedæ¨¡å¼æˆåŠŸæ„å»º
func TestBuildTransactionFromDraft_Delegated_Success(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()
	callerAddress := make([]byte, 20)

	draftJSON := `{
		"sign_mode": "delegated",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}],
		"metadata": {
			"delegation_params": {
				"original_owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
				"allowed_delegates": ["beefdeadbeefdeadbeefdeadbeefdeadbeefdead"],
				"authorized_operations": ["transfer"],
				"expiry_duration_blocks": 100,
				"max_value_per_operation": "1000"
			}
		}
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil,           // eutxoQuery
		callerAddress, // callerAddress
		nil,           // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "delegated", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_Threshold_Success æµ‹è¯•thresholdæ¨¡å¼æˆåŠŸæ„å»º
func TestBuildTransactionFromDraft_Threshold_Success(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()

	key1 := "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
	key2 := "beefdeadbeefdeadbeefdeadbeefdeadbeefdead"
	key3 := "feedbeefdeadbeefdeadbeefdeadbeefdeadbeef"

	draftJSON := `{
		"sign_mode": "threshold",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}],
		"metadata": {
			"threshold_params": {
				"threshold": 2,
				"total_parties": 3,
				"party_verification_keys": ["` + key1 + `", "` + key2 + `", "` + key3 + `"],
				"signature_scheme": "BLS_THRESHOLD",
				"security_level": 256
			}
		}
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "threshold", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_Paymaster_Success æµ‹è¯•paymasteræ¨¡å¼æˆåŠŸæ„å»ºï¼ˆæ£€æŸ¥ä¿®å¤åçš„UTXOé€‰æ‹©ï¼‰
func TestBuildTransactionFromDraft_Paymaster_Success(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "200", // é‡‘é¢è¶³å¤Ÿæ”¯ä»˜è´¹ç”¨100
									},
								},
							},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "paymaster",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}],
		"metadata": {
			"paymaster_params": {
				"fee_amount": "100",
				"token_id": "",
				"miner_addr": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef"
			}
		}
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		mockUTXOQuery, // eutxoQuery
		nil,           // callerAddress
		nil,           // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, "paymaster", receipt.Mode, "æ¨¡å¼åº”è¯¥æ­£ç¡®")
	assert.Equal(t, 1, mockTxAdapter.addCustomInputCallCount, "åº”è¯¥æ·»åŠ èµåŠ©æ± è¾“å…¥")
	assert.Equal(t, 2, mockTxAdapter.addCustomOutputCallCount, "åº”è¯¥æ·»åŠ è´¹ç”¨è¾“å‡ºå’Œä¸šåŠ¡è¾“å‡º")
}

// TestBuildTransactionFromDraft_WithIntents æµ‹è¯•å¸¦æ„å›¾çš„äº¤æ˜“æ„å»º
func TestBuildTransactionFromDraft_WithIntents(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"intents": [{
			"type": "transfer",
			"params": {
				"from": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
				"to": "beefdeadbeefdeadbeefdeadbeefdeadbeefdead",
				"amount": "1000",
				"token_id": ""
			}
		}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, 1, mockTxAdapter.addTransferCallCount, "åº”è¯¥å¤„ç†è½¬è´¦æ„å›¾")
}

// TestBuildTransactionFromDraft_ParseError æµ‹è¯•è§£æé”™è¯¯
func TestBuildTransactionFromDraft_ParseError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	invalidJSON := `{invalid json}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(invalidJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "è§£æ Draft JSON å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_ValidateError æµ‹è¯•éªŒè¯é”™è¯¯
func TestBuildTransactionFromDraft_ValidateError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "invalid_mode",
		"inputs": [{"tx_hash": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "output_index": 0}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "éªŒè¯ Draft JSON å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_BeginTransactionError æµ‹è¯•åˆ›å»ºDrafté”™è¯¯
func TestBuildTransactionFromDraft_BeginTransactionError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		beginTransactionError: assert.AnError,
	}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"inputs": [{"tx_hash": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "output_index": 0}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "åˆ›å»º Draft å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_ProcessIntentError æµ‹è¯•å¤„ç†æ„å›¾é”™è¯¯
func TestBuildTransactionFromDraft_ProcessIntentError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		addTransferError: assert.AnError,
	}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"intents": [{
			"type": "transfer",
			"params": {
				"from": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
				"to": "beefdeadbeefdeadbeefdeadbeefdeadbeefdead",
				"amount": "1000"
			}
		}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "å¤„ç†æ„å›¾å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_AddInputError æµ‹è¯•æ·»åŠ è¾“å…¥é”™è¯¯
func TestBuildTransactionFromDraft_AddInputError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		addCustomInputError: assert.AnError,
	}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"inputs": [{"tx_hash": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "output_index": 0}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "æ·»åŠ è¾“å…¥å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_BuildOutputError æµ‹è¯•æ„å»ºè¾“å‡ºé”™è¯¯
func TestBuildTransactionFromDraft_BuildOutputError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"outputs": [{"type": "asset", "owner": "invalid", "amount": "1000"}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "æ„å»ºè¾“å‡ºå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_AddOutputError æµ‹è¯•æ·»åŠ è¾“å‡ºé”™è¯¯
func TestBuildTransactionFromDraft_AddOutputError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		addCustomOutputError: assert.AnError,
	}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "æ·»åŠ è¾“å‡ºå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_ApplySignModeLogicError æµ‹è¯•åº”ç”¨ç­¾åæ¨¡å¼é€»è¾‘é”™è¯¯
func TestBuildTransactionFromDraft_ApplySignModeLogicError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	// ç¼ºå°‘delegation_params
	draftJSON := `{
		"sign_mode": "delegated",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil,              // eutxoQuery
		nil,              // callerAddress
		make([]byte, 20), // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "åº”ç”¨ç­¾åæ¨¡å¼é€»è¾‘å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_FinalizeError æµ‹è¯•Finalizeé”™è¯¯
func TestBuildTransactionFromDraft_FinalizeError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{
		finalizeTransactionError: assert.AnError,
	}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "å®Œæˆäº¤æ˜“æ„å»ºå¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_RouteError æµ‹è¯•è·¯ç”±é”™è¯¯
func TestBuildTransactionFromDraft_RouteError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		err: assert.AnError, // è®¡ç®—å“ˆå¸Œå¤±è´¥
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	// routeBySignMode ä¼šè¿”å›é”™è¯¯æ”¶æ®ï¼Œä½†é”™è¯¯ä¿¡æ¯åœ¨ receipt.Error ä¸­
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
}

// TestBuildTransactionFromDraft_Paymaster_InsufficientUTXO æµ‹è¯•paymasteræ¨¡å¼UTXOé‡‘é¢ä¸è¶³
func TestBuildTransactionFromDraft_Paymaster_InsufficientUTXO(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "50", // é‡‘é¢ä¸è¶³æ”¯ä»˜è´¹ç”¨100
									},
								},
							},
						},
					},
				},
			},
		},
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "paymaster",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}],
		"metadata": {
			"paymaster_params": {
				"fee_amount": "100",
				"token_id": ""
			}
		}
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		mockUTXOQuery, // eutxoQuery
		nil,           // callerAddress
		nil,           // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "é‡‘é¢è¶³å¤Ÿçš„UTXO", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_Paymaster_NoAssetUTXO æµ‹è¯•paymasteræ¨¡å¼æ²¡æœ‰Assetç±»å‹UTXO
func TestBuildTransactionFromDraft_Paymaster_NoAssetUTXO(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		sponsorUTXOs: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE, // éAssetç±»å‹
			},
		},
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "paymaster",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}],
		"metadata": {
			"paymaster_params": {
				"fee_amount": "100",
				"token_id": ""
			}
		}
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		mockUTXOQuery, // eutxoQuery
		nil,           // callerAddress
		nil,           // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "é‡‘é¢è¶³å¤Ÿçš„UTXO", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}
