package hostabi

import (
	"context"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	"github.com/weisyn/v1/internal/core/ispc/testutil"
	utxo "github.com/weisyn/v1/pb/blockchain/utxo"
	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ============================================================================
// ports_query_utxo.go æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šå‘ç° GetBalance, GetTransaction çš„ç¼ºé™·å’ŒBUG
//
// ============================================================================

// TestGetBalance_NativeCoin æµ‹è¯•æŸ¥è¯¢åŸç”Ÿå¸ä½™é¢
func TestGetBalance_NativeCoin(t *testing.T) {
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "1000",
									},
								},
							},
						},
					},
				},
			},
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "2000",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ä½™é¢")
	assert.Equal(t, uint64(3000), balance, "ä½™é¢åº”è¯¥æ˜¯3000ï¼ˆ1000+2000ï¼‰")
}

// TestGetBalance_ContractToken æµ‹è¯•æŸ¥è¯¢åˆçº¦ä»£å¸ä½™é¢
func TestGetBalance_ContractToken(t *testing.T) {
	tokenID := make([]byte, 20)
	tokenID[0] = 0x01 // è®¾ç½®tokenID
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_ContractToken{
									ContractToken: &pb.ContractTokenAsset{
										ContractAddress: tokenID,
										Amount:          "5000",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, tokenID)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ä»£å¸ä½™é¢")
	assert.Equal(t, uint64(5000), balance, "ä½™é¢åº”è¯¥æ˜¯5000")
}

// TestGetBalance_NilEUTXOQuery æµ‹è¯•nil EUTXOQuery
func TestGetBalance_NilEUTXOQuery(t *testing.T) {
	// ç”±äºNewHostRuntimePortsä¸å…è®¸nil EUTXOQueryï¼Œæˆ‘ä»¬éœ€è¦ç›´æ¥æ„é€ HostRuntimePorts
	// æˆ–è€…ä½¿ç”¨åå°„è®¾ç½®ç§æœ‰å­—æ®µï¼Œä½†æ›´ç®€å•çš„æ–¹æ³•æ˜¯åˆ›å»ºä¸€ä¸ªç©ºçš„HostRuntimePortså¹¶æ‰‹åŠ¨è®¾ç½®
	logger := testutil.NewTestLogger()
	mockChainQuery := &mockChainQueryForHostABI{}
	mockUTXOQuery := &mockUTXOQueryForHostABI{} // å…ˆåˆ›å»ºæ­£å¸¸çš„
	mockCASStorage := &mockCASStorageForHostABI{}
	mockTxQuery := &mockTxQueryForHostABI{}
	mockResourceQuery := &mockResourceQueryForHostABI{}
	mockDraftService := &mockDraftServiceForHostABI{}
	mockHashManager := testutil.NewTestHashManager()
	mockExecCtx := createMockExecutionContextForHostABI()

	hostABI, err := NewHostRuntimePorts(
		logger,
		mockChainQuery,
		&mockBlockQueryForHostABI{},
		mockUTXOQuery,
		mockCASStorage,
		mockTxQuery,
		mockResourceQuery,
		mockDraftService,
		mockHashManager,
		mockExecCtx,
	)
	require.NoError(t, err, "åº”è¯¥æˆåŠŸåˆ›å»ºHostRuntimePorts")

	// æ‰‹åŠ¨è®¾ç½®ä¸ºnilä»¥æµ‹è¯•nilæ£€æŸ¥
	hostABIPtr := hostABI.(*HostRuntimePorts)
	hostABIPtr.eutxoQuery = nil

	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABIPtr.GetBalance(ctx, address, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Equal(t, uint64(0), balance, "ä½™é¢åº”è¯¥ä¸º0")
	assert.Contains(t, err.Error(), "eutxoQuery æœªåˆå§‹åŒ–", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestGetBalance_GetUTXOsByAddressFailed æµ‹è¯•GetUTXOsByAddresså¤±è´¥
func TestGetBalance_GetUTXOsByAddressFailed(t *testing.T) {
	mockUTXOQuery := &mockUTXOQueryForPorts{
		getUTXOsByAddressError: assert.AnError,
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, nil)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Equal(t, uint64(0), balance, "ä½™é¢åº”è¯¥ä¸º0")
	assert.Contains(t, err.Error(), "æŸ¥è¯¢ä½™é¢å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestGetBalance_EmptyUTXOList æµ‹è¯•ç©ºUTXOåˆ—è¡¨
func TestGetBalance_EmptyUTXOList(t *testing.T) {
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ï¼ˆç©ºåˆ—è¡¨ï¼‰")
	assert.Equal(t, uint64(0), balance, "ä½™é¢åº”è¯¥ä¸º0")
}

// TestGetBalance_FilterNonAssetUTXO æµ‹è¯•è¿‡æ»¤éAssetç±»å‹UTXO
func TestGetBalance_FilterNonAssetUTXO(t *testing.T) {
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_RESOURCE, // éAssetç±»å‹
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{},
				},
			},
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "1000",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢")
	assert.Equal(t, uint64(1000), balance, "ä½™é¢åº”è¯¥æ˜¯1000ï¼ˆåªè®¡ç®—Assetç±»å‹ï¼‰")
}

// TestGetBalance_NilUTXOItem æµ‹è¯•nil UTXOé¡¹
func TestGetBalance_NilUTXOItem(t *testing.T) {
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			nil, // nil UTXOé¡¹
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "1000",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ï¼ˆè·³è¿‡nilé¡¹ï¼‰")
	assert.Equal(t, uint64(1000), balance, "ä½™é¢åº”è¯¥æ˜¯1000")
}

// TestGetBalance_NoCachedOutput æµ‹è¯•æ²¡æœ‰ç¼“å­˜è¾“å‡º
func TestGetBalance_NoCachedOutput(t *testing.T) {
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_ReferenceOnly{
					ReferenceOnly: true, // åªæœ‰å¼•ç”¨ï¼Œæ²¡æœ‰ç¼“å­˜è¾“å‡º
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ï¼ˆè·³è¿‡æ— ç¼“å­˜è¾“å‡ºï¼‰")
	assert.Equal(t, uint64(0), balance, "ä½™é¢åº”è¯¥ä¸º0")
}

// TestGetBalance_NoAssetOutput æµ‹è¯•æ²¡æœ‰AssetOutput
func TestGetBalance_NoAssetOutput(t *testing.T) {
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Resource{
							Resource: &pb.ResourceOutput{}, // éAssetè¾“å‡º
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ï¼ˆè·³è¿‡éAssetè¾“å‡ºï¼‰")
	assert.Equal(t, uint64(0), balance, "ä½™é¢åº”è¯¥ä¸º0")
}

// TestGetBalance_TokenIDMismatch æµ‹è¯•ä»£å¸IDä¸åŒ¹é…
func TestGetBalance_TokenIDMismatch(t *testing.T) {
	tokenID1 := make([]byte, 20)
	tokenID1[0] = 0x01
	tokenID2 := make([]byte, 20)
	tokenID2[0] = 0x02
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_ContractToken{
									ContractToken: &pb.ContractTokenAsset{
										ContractAddress: tokenID1, // ä¸åŒçš„tokenID
										Amount:          "5000",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, tokenID2)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ï¼ˆè·³è¿‡ä¸åŒ¹é…çš„ä»£å¸ï¼‰")
	assert.Equal(t, uint64(0), balance, "ä½™é¢åº”è¯¥ä¸º0")
}

// TestGetBalance_InvalidAmount æµ‹è¯•æ— æ•ˆé‡‘é¢å­—ç¬¦ä¸²
func TestGetBalance_InvalidAmount(t *testing.T) {
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 0,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "invalid_amount", // æ— æ•ˆé‡‘é¢
									},
								},
							},
						},
					},
				},
			},
			{
				Outpoint: &pb.OutPoint{
					TxId:        make([]byte, 32),
					OutputIndex: 1,
				},
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "1000", // æœ‰æ•ˆé‡‘é¢
									},
								},
							},
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ï¼ˆè·³è¿‡æ— æ•ˆé‡‘é¢ï¼‰")
	assert.Equal(t, uint64(1000), balance, "ä½™é¢åº”è¯¥æ˜¯1000ï¼ˆåªè®¡ç®—æœ‰æ•ˆé‡‘é¢ï¼‰")
}

// TestGetBalance_EmptyAmount æµ‹è¯•ç©ºé‡‘é¢å­—ç¬¦ä¸²
func TestGetBalance_EmptyAmount(t *testing.T) {
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_NativeCoin{
									NativeCoin: &pb.NativeCoinAsset{
										Amount: "", // ç©ºé‡‘é¢
									},
								},
							},
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ï¼ˆè·³è¿‡ç©ºé‡‘é¢ï¼‰")
	assert.Equal(t, uint64(0), balance, "ä½™é¢åº”è¯¥ä¸º0")
}

// TestGetBalance_ContractTokenAddressLengthMismatch æµ‹è¯•åˆçº¦åœ°å€é•¿åº¦ä¸åŒ¹é…
func TestGetBalance_ContractTokenAddressLengthMismatch(t *testing.T) {
	tokenID := make([]byte, 20)
	mockUTXOQuery := &mockUTXOQueryForPorts{
		utxos: []*utxo.UTXO{
			{
				Category: utxo.UTXOCategory_UTXO_CATEGORY_ASSET,
				ContentStrategy: &utxo.UTXO_CachedOutput{
					CachedOutput: &pb.TxOutput{
						OutputContent: &pb.TxOutput_Asset{
							Asset: &pb.AssetOutput{
								AssetContent: &pb.AssetOutput_ContractToken{
									ContractToken: &pb.ContractTokenAsset{
										ContractAddress: make([]byte, 19), // é•¿åº¦ä¸åŒ¹é…ï¼ˆ19 vs 20ï¼‰
										Amount:          "5000",
									},
								},
							},
						},
					},
				},
			},
		},
	}
	hostABI := createHostRuntimePortsWithUTXOQuery(t, mockUTXOQuery)
	ctx := context.Background()
	address := make([]byte, 20)

	balance, err := hostABI.GetBalance(ctx, address, tokenID)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢ï¼ˆè·³è¿‡é•¿åº¦ä¸åŒ¹é…ï¼‰")
	assert.Equal(t, uint64(0), balance, "ä½™é¢åº”è¯¥ä¸º0")
}

// TestGetTransaction_Success æµ‹è¯•æˆåŠŸæŸ¥è¯¢äº¤æ˜“
func TestGetTransaction_Success(t *testing.T) {
	mockTxQuery := &mockTxQueryForPorts{
		tx: &pb.Transaction{
			Inputs:  []*pb.TxInput{},
			Outputs: []*pb.TxOutput{},
		},
		blockHeight: 100,
	}
	hostABI := createHostRuntimePortsWithTxQuery(t, mockTxQuery)
	ctx := context.Background()
	txID := make([]byte, 32)

	tx, height, confirmed, err := hostABI.GetTransaction(ctx, txID)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢äº¤æ˜“")
	assert.NotNil(t, tx, "åº”è¯¥è¿”å›äº¤æ˜“å¯¹è±¡")
	assert.Equal(t, uint64(100), height, "åŒºå—é«˜åº¦åº”è¯¥æ­£ç¡®")
	assert.True(t, confirmed, "åº”è¯¥å·²ç¡®è®¤")
}

// TestGetTransaction_Unconfirmed æµ‹è¯•æœªç¡®è®¤äº¤æ˜“
func TestGetTransaction_Unconfirmed(t *testing.T) {
	mockTxQuery := &mockTxQueryForPorts{
		tx: &pb.Transaction{
			Inputs:  []*pb.TxInput{},
			Outputs: []*pb.TxOutput{},
		},
		blockHeight: 0, // æœªç¡®è®¤
	}
	hostABI := createHostRuntimePortsWithTxQuery(t, mockTxQuery)
	ctx := context.Background()
	txID := make([]byte, 32)

	tx, height, confirmed, err := hostABI.GetTransaction(ctx, txID)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢äº¤æ˜“")
	assert.NotNil(t, tx, "åº”è¯¥è¿”å›äº¤æ˜“å¯¹è±¡")
	assert.Equal(t, uint64(0), height, "åŒºå—é«˜åº¦åº”è¯¥ä¸º0")
	assert.False(t, confirmed, "åº”è¯¥æœªç¡®è®¤")
}

// TestGetTransaction_NilTxQuery æµ‹è¯•nil TxQuery
func TestGetTransaction_NilTxQuery(t *testing.T) {
	logger := testutil.NewTestLogger()
	mockChainQuery := &mockChainQueryForHostABI{}
	mockUTXOQuery := &mockUTXOQueryForHostABI{}
	mockCASStorage := &mockCASStorageForHostABI{}
	mockTxQuery := &mockTxQueryForHostABI{} // å…ˆåˆ›å»ºæ­£å¸¸çš„
	mockResourceQuery := &mockResourceQueryForHostABI{}
	mockDraftService := &mockDraftServiceForHostABI{}
	mockHashManager := testutil.NewTestHashManager()
	mockExecCtx := createMockExecutionContextForHostABI()

	hostABI, err := NewHostRuntimePorts(
		logger,
		mockChainQuery,
		&mockBlockQueryForHostABI{},
		mockUTXOQuery,
		mockCASStorage,
		mockTxQuery,
		mockResourceQuery,
		mockDraftService,
		mockHashManager,
		mockExecCtx,
	)
	require.NoError(t, err, "åº”è¯¥æˆåŠŸåˆ›å»ºHostRuntimePorts")

	// æ‰‹åŠ¨è®¾ç½®ä¸ºnilä»¥æµ‹è¯•nilæ£€æŸ¥
	hostABIPtr := hostABI.(*HostRuntimePorts)
	hostABIPtr.txQuery = nil

	ctx := context.Background()
	txID := make([]byte, 32)

	tx, height, confirmed, err := hostABIPtr.GetTransaction(ctx, txID)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, tx, "äº¤æ˜“åº”è¯¥ä¸ºnil")
	assert.Equal(t, uint64(0), height, "åŒºå—é«˜åº¦åº”è¯¥ä¸º0")
	assert.False(t, confirmed, "åº”è¯¥æœªç¡®è®¤")
	assert.Contains(t, err.Error(), "txQuery æœªåˆå§‹åŒ–", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestGetTransaction_GetTransactionFailed æµ‹è¯•GetTransactionå¤±è´¥
func TestGetTransaction_GetTransactionFailed(t *testing.T) {
	mockTxQuery := &mockTxQueryForPorts{
		getTransactionError: assert.AnError,
	}
	hostABI := createHostRuntimePortsWithTxQuery(t, mockTxQuery)
	ctx := context.Background()
	txID := make([]byte, 32)

	tx, height, confirmed, err := hostABI.GetTransaction(ctx, txID)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.Nil(t, tx, "äº¤æ˜“åº”è¯¥ä¸ºnil")
	assert.Equal(t, uint64(0), height, "åŒºå—é«˜åº¦åº”è¯¥ä¸º0")
	assert.False(t, confirmed, "åº”è¯¥æœªç¡®è®¤")
	assert.Contains(t, err.Error(), "æŸ¥è¯¢äº¤æ˜“å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestGetTransaction_GetTxBlockHeightFailed æµ‹è¯•GetTxBlockHeightå¤±è´¥
func TestGetTransaction_GetTxBlockHeightFailed(t *testing.T) {
	mockTxQuery := &mockTxQueryForPorts{
		tx: &pb.Transaction{
			Inputs:  []*pb.TxInput{},
			Outputs: []*pb.TxOutput{},
		},
		getTxBlockHeightError: assert.AnError, // GetTxBlockHeightå¤±è´¥
	}
	hostABI := createHostRuntimePortsWithTxQuery(t, mockTxQuery)
	ctx := context.Background()
	txID := make([]byte, 32)

	tx, height, confirmed, err := hostABI.GetTransaction(ctx, txID)

	// GetTxBlockHeightå¤±è´¥æ—¶ï¼Œheightè®¾ä¸º0ï¼Œconfirmedè®¾ä¸ºfalseï¼Œä½†ä¸è¿”å›é”™è¯¯
	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæŸ¥è¯¢äº¤æ˜“ï¼ˆå³ä½¿GetTxBlockHeightå¤±è´¥ï¼‰")
	assert.NotNil(t, tx, "åº”è¯¥è¿”å›äº¤æ˜“å¯¹è±¡")
	assert.Equal(t, uint64(0), height, "åŒºå—é«˜åº¦åº”è¯¥ä¸º0")
	assert.False(t, confirmed, "åº”è¯¥æœªç¡®è®¤")
}

// ============================================================================
// è¾…åŠ©å‡½æ•°
// ============================================================================

// createHostRuntimePortsWithUTXOQuery åˆ›å»ºå¸¦UTXOQueryçš„HostRuntimePorts
func createHostRuntimePortsWithUTXOQuery(t *testing.T, mockUTXOQuery *mockUTXOQueryForPorts) *HostRuntimePorts {
	t.Helper()

	logger := testutil.NewTestLogger()
	mockChainQuery := &mockChainQueryForHostABI{}
	mockCASStorage := &mockCASStorageForHostABI{}
	mockTxQuery := &mockTxQueryForHostABI{}
	mockResourceQuery := &mockResourceQueryForHostABI{}
	mockDraftService := &mockDraftServiceForHostABI{}
	mockHashManager := testutil.NewTestHashManager()
	mockExecCtx := createMockExecutionContextForHostABI()

	hostABI, err := NewHostRuntimePorts(
		logger,
		mockChainQuery,
		&mockBlockQueryForHostABI{},
		mockUTXOQuery,
		mockCASStorage,
		mockTxQuery,
		mockResourceQuery,
		mockDraftService,
		mockHashManager,
		mockExecCtx,
	)
	require.NoError(t, err, "åº”è¯¥æˆåŠŸåˆ›å»ºHostRuntimePorts")

	return hostABI.(*HostRuntimePorts)
}

// createHostRuntimePortsWithTxQuery åˆ›å»ºå¸¦TxQueryçš„HostRuntimePorts
func createHostRuntimePortsWithTxQuery(t *testing.T, mockTxQuery *mockTxQueryForPorts) *HostRuntimePorts {
	t.Helper()

	logger := testutil.NewTestLogger()
	mockChainQuery := &mockChainQueryForHostABI{}
	mockUTXOQuery := &mockUTXOQueryForHostABI{}
	mockCASStorage := &mockCASStorageForHostABI{}
	mockResourceQuery := &mockResourceQueryForHostABI{}
	mockDraftService := &mockDraftServiceForHostABI{}
	mockHashManager := testutil.NewTestHashManager()
	mockExecCtx := createMockExecutionContextForHostABI()

	hostABI, err := NewHostRuntimePorts(
		logger,
		mockChainQuery,
		&mockBlockQueryForHostABI{},
		mockUTXOQuery,
		mockCASStorage,
		mockTxQuery,
		mockResourceQuery,
		mockDraftService,
		mockHashManager,
		mockExecCtx,
	)
	require.NoError(t, err, "åº”è¯¥æˆåŠŸåˆ›å»ºHostRuntimePorts")

	return hostABI.(*HostRuntimePorts)
}

// mockUTXOQueryForPorts Mockçš„UTXOæŸ¥è¯¢æœåŠ¡ï¼ˆç”¨äºportsæµ‹è¯•ï¼‰
type mockUTXOQueryForPorts struct {
	utxos                  []*utxo.UTXO
	getUTXOsByAddressError error
}

func (m *mockUTXOQueryForPorts) GetUTXO(ctx context.Context, outpoint *pb.OutPoint) (*utxo.UTXO, error) {
	return nil, nil
}

func (m *mockUTXOQueryForPorts) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxo.UTXOCategory, onlyAvailable bool) ([]*utxo.UTXO, error) {
	if m.getUTXOsByAddressError != nil {
		return nil, m.getUTXOsByAddressError
	}
	return m.utxos, nil
}

func (m *mockUTXOQueryForPorts) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxo.UTXO, error) {
	return nil, nil
}

func (m *mockUTXOQueryForPorts) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	return nil, nil
}

// mockTxQueryForPorts Mockçš„äº¤æ˜“æŸ¥è¯¢æœåŠ¡ï¼ˆç”¨äºportsæµ‹è¯•ï¼‰
type mockTxQueryForPorts struct {
	tx                    *pb.Transaction
	blockHeight           uint64
	getTransactionError   error
	getTxBlockHeightError error
}

func (m *mockTxQueryForPorts) GetTransaction(ctx context.Context, txHash []byte) (blockHash []byte, txIndex uint32, transaction *pb.Transaction, err error) {
	if m.getTransactionError != nil {
		return nil, 0, nil, m.getTransactionError
	}
	return make([]byte, 32), 0, m.tx, nil
}

func (m *mockTxQueryForPorts) GetTxBlockHeight(ctx context.Context, txHash []byte) (uint64, error) {
	if m.getTxBlockHeightError != nil {
		return 0, m.getTxBlockHeightError
	}
	return m.blockHeight, nil
}

func (m *mockTxQueryForPorts) GetTransactionsByBlock(ctx context.Context, blockHash []byte) ([]*pb.Transaction, error) {
	return nil, nil
}

func (m *mockTxQueryForPorts) GetAccountNonce(ctx context.Context, address []byte) (uint64, error) {
	return 0, nil
}

func (m *mockTxQueryForPorts) GetBlockTimestamp(ctx context.Context, height uint64) (int64, error) {
	return 0, nil
}

