// Package hostabi æä¾› Host ABI å®ç°
//
// tx_adapter_impl.go: TxAdapter æ¥å£å®ç°
package hostabi

import (
	"context"
	"fmt"

	"github.com/weisyn/v1/internal/core/tx/selector"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/tx"
	"github.com/weisyn/v1/pkg/types"
)

// txAdapterImpl TxAdapter æ¥å£å®ç°
//
// ğŸ¯ **èŒè´£**:
//   - å°è£… TX æ¨¡å—èƒ½åŠ›ï¼Œæä¾›é“¾ä¸Šäº¤æ˜“æ„å»ºåŸè¯­
//   - ç¡®ä¿ç¡®å®šæ€§æ‰§è¡Œï¼ˆå›ºå®šåŒºå—è§†å›¾ã€ç¡®å®šæ€§ UTXO é€‰æ‹©ï¼‰
//   - ç®¡ç†é“¾ä¸Š Draft ç”Ÿå‘½å‘¨æœŸï¼ˆç»‘å®šæ‰§è¡Œä¸Šä¸‹æ–‡ï¼‰
//
// ğŸ’¡ **ä¾èµ–æ³¨å…¥**ï¼š
//   - draftService: äº¤æ˜“è‰ç¨¿æœåŠ¡
//   - builder: äº¤æ˜“æ„å»ºå™¨
//   - verifier: äº¤æ˜“éªŒè¯å™¨
//   - selector: UTXO é€‰æ‹©å™¨ï¼ˆç¡®å®šæ€§ï¼‰
//   - draftManager: é“¾ä¸Š Draft ç®¡ç†å™¨
type txAdapterImpl struct {
	draftService tx.TransactionDraftService
	verifier     tx.TxVerifier
	selector     *selector.Service
	draftManager chainDraftManager
}

// NewTxAdapter åˆ›å»º TxAdapter å®ä¾‹ï¼ˆå¯¼å‡ºå‡½æ•°ï¼Œä¾› module.go ä½¿ç”¨ï¼‰
//
// å‚æ•°ï¼š
//   - draftService: äº¤æ˜“è‰ç¨¿æœåŠ¡
//   - verifier: äº¤æ˜“éªŒè¯å™¨
//   - selector: UTXO é€‰æ‹©å™¨
//
// è¿”å›ï¼š
//   - TxAdapter: TxAdapter å®ä¾‹
func NewTxAdapter(
	draftService tx.TransactionDraftService,
	verifier tx.TxVerifier,
	selector *selector.Service,
) TxAdapter {
	return &txAdapterImpl{
		draftService: draftService,
		verifier:     verifier,
		selector:     selector,
		draftManager: newChainDraftManager(draftService),
	}
}

// BeginTransaction å¼€å§‹æ„å»ºäº¤æ˜“
//
// ğŸ”„ æµç¨‹ï¼š
//  1. åˆ›å»ºé“¾ä¸Š Draftï¼ˆå†…å­˜ï¼‰
//  2. ç»‘å®šåˆ°å½“å‰æ‰§è¡Œä¸Šä¸‹æ–‡
//  3. è¿”å› draftHandleï¼ˆç”¨äºåç»­è°ƒç”¨ï¼‰
//
// å‚æ•°ï¼š
//   - ctx: æ‰§è¡Œä¸Šä¸‹æ–‡
//   - blockHeight: å½“å‰åŒºå—é«˜åº¦ï¼ˆå›ºå®šåŒºå—è§†å›¾ï¼‰
//   - blockTimestamp: å½“å‰åŒºå—æ—¶é—´æˆ³
//
// è¿”å›ï¼š
//   - draftHandle: Draft å¥æŸ„ï¼ˆ>0 æˆåŠŸï¼Œ0 å¤±è´¥ï¼‰
//   - error: é”™è¯¯ä¿¡æ¯
func (a *txAdapterImpl) BeginTransaction(
	ctx context.Context,
	blockHeight uint64,
	blockTimestamp uint64,
) (int32, error) {
	// è°ƒç”¨ draftManager åˆ›å»º Draft
	handle, err := a.draftManager.CreateDraft(ctx, blockHeight, blockTimestamp)
	if err != nil {
		return 0, fmt.Errorf("å¼€å§‹äº¤æ˜“å¤±è´¥: %w", err)
	}

	return handle, nil
}

// AddTransfer æ·»åŠ è½¬è´¦æ„å›¾
//
// ğŸ”„ æµç¨‹ï¼š
//  1. æ ¹æ® draftHandle è·å– Draft
//  2. ä½¿ç”¨ç¡®å®šæ€§ UTXO é€‰æ‹©å™¨é€‰æ‹©è¾“å…¥
//  3. æ·»åŠ è½¬è´¦è¾“å‡º
//  4. è®¡ç®—æ‰¾é›¶å¹¶æ·»åŠ æ‰¾é›¶è¾“å‡º
//
// å‚æ•°ï¼š
//   - ctx: æ‰§è¡Œä¸Šä¸‹æ–‡
//   - draftHandle: Draft å¥æŸ„
//   - from: å‘é€æ–¹åœ°å€
//   - to: æ¥æ”¶æ–¹åœ°å€
//   - amount: è½¬è´¦é‡‘é¢ï¼ˆå­—ç¬¦ä¸²æ ¼å¼ï¼Œå¦‚ "100"ï¼‰
//   - tokenID: ä»£å¸æ ‡è¯†ï¼ˆç©ºè¡¨ç¤ºåŸç”Ÿå¸ï¼‰
//
// è¿”å›ï¼š
//   - outputIndex: è½¬è´¦è¾“å‡ºç´¢å¼•ï¼ˆæˆåŠŸè¿”å› >= 0ï¼Œå¤±è´¥è¿”å› -1ï¼‰
//   - error: é”™è¯¯ä¿¡æ¯
func (a *txAdapterImpl) AddTransfer(
	ctx context.Context,
	draftHandle int32,
	from []byte,
	to []byte,
	amount string,
	tokenID []byte,
) (int32, error) {
	// 1. è·å– Draft
	draft, err := a.draftManager.GetDraft(ctx, draftHandle)
	if err != nil {
		return -1, fmt.Errorf("è·å– Draft å¤±è´¥: %w", err)
	}

	execCtx := GetExecutionContext(ctx)

	// 2. æ„é€  TokenID Key åŠèµ„äº§è¯·æ±‚
	var (
		tokenIDKey   string
		contractAddr []byte
	)

	if len(tokenID) == 0 {
		tokenIDKey = "native"
	} else {
		if execCtx == nil {
			return -1, fmt.Errorf("æ‰§è¡Œä¸Šä¸‹æ–‡ç¼ºå¤±ï¼Œæ— æ³•å¤„ç†åˆçº¦ä»£å¸è½¬è´¦")
		}
		contractAddr = execCtx.GetContractAddress()
		if len(contractAddr) != 20 {
			return -1, fmt.Errorf("åˆçº¦ä»£å¸è½¬è´¦éœ€è¦æœ‰æ•ˆçš„20å­—èŠ‚åˆçº¦åœ°å€ï¼Œå®é™…: %d", len(contractAddr))
		}
		tokenIDKey = fmt.Sprintf("%x:%x", contractAddr, tokenID)
	}

	assetRequest := &selector.AssetRequest{
		TokenID: tokenIDKey,
		Amount:  amount,
	}
	if len(contractAddr) > 0 {
		assetRequest.ContractAddress = append([]byte(nil), contractAddr...)
		assetRequest.ClassID = append([]byte(nil), tokenID...)
	}

	// 3. ä½¿ç”¨ Selector é€‰æ‹© UTXO
	assetRequests := []*selector.AssetRequest{assetRequest}

	selectionResult, err := a.selector.SelectUTXOs(ctx, from, assetRequests)
	if err != nil {
		return -1, fmt.Errorf("UTXO é€‰æ‹©å¤±è´¥: %w", err)
	}

	// 4. æ·»åŠ é€‰ä¸­çš„ UTXO ä½œä¸ºè¾“å…¥
	for _, utxo := range selectionResult.SelectedUTXOs {
		_, err := a.draftService.AddInput(ctx, draft, utxo.Outpoint, false, nil)
		if err != nil {
			return -1, fmt.Errorf("æ·»åŠ è¾“å…¥å¤±è´¥: %w", err)
		}
	}

	// 5. æ·»åŠ è½¬è´¦è¾“å‡º
	var toLockingCondition *transaction.LockingCondition
	if len(contractAddr) > 0 {
		toLockingCondition = buildContractLock(contractAddr)
	} else {
		toLockingCondition = buildSingleKeyLock(to)
	}

	outputIndex, err := a.draftService.AddAssetOutput(ctx, draft, to, amount, tokenID, []*transaction.LockingCondition{toLockingCondition})
	if err != nil {
		return -1, fmt.Errorf("æ·»åŠ è½¬è´¦è¾“å‡ºå¤±è´¥: %w", err)
	}
	if len(contractAddr) > 0 {
		patchContractTokenOutput(draft, int(outputIndex), contractAddr)
	}

	// 6. æ·»åŠ æ‰¾é›¶è¾“å‡ºï¼ˆå¦‚æœæœ‰ï¼‰
	if changeAmount, ok := selectionResult.ChangeAmounts[tokenIDKey]; ok {
		// æ‰¾é›¶é‡‘é¢å·²ç»æ˜¯å­—ç¬¦ä¸²ç±»å‹ï¼Œç›´æ¥ä½¿ç”¨
		changeStr := changeAmount

		// æ‰¾é›¶é”å®šæ¡ä»¶ï¼ˆå›å‘é€æ–¹ï¼Œä½¿ç”¨ç›¸åŒçš„å•å¯†é’¥é”ï¼‰
		var changeLockingCondition *transaction.LockingCondition
		if len(contractAddr) > 0 {
			changeLockingCondition = buildContractLock(contractAddr)
		} else {
			changeLockingCondition = buildSingleKeyLock(from)
		}

		changeIndex, err := a.draftService.AddAssetOutput(ctx, draft, from, changeStr, tokenID, []*transaction.LockingCondition{changeLockingCondition})
		if err != nil {
			return -1, fmt.Errorf("æ·»åŠ æ‰¾é›¶è¾“å‡ºå¤±è´¥: %w", err)
		}
		if len(contractAddr) > 0 {
			patchContractTokenOutput(draft, int(changeIndex), contractAddr)
		}
	}

	// è¿”å›è½¬è´¦è¾“å‡ºç´¢å¼•
	return int32(outputIndex), nil
}

func patchContractTokenOutput(draft *types.DraftTx, index int, contractAddr []byte) {
	if draft == nil || draft.Tx == nil || len(contractAddr) == 0 {
		return
	}
	if index < 0 || index >= len(draft.Tx.Outputs) {
		return
	}
	output := draft.Tx.Outputs[index]
	if output == nil {
		return
	}
	asset := output.GetAsset()
	if asset == nil {
		return
	}
	contractToken := asset.GetContractToken()
	if contractToken == nil {
		return
	}
	if len(contractToken.ContractAddress) == 0 {
		contractToken.ContractAddress = append([]byte(nil), contractAddr...)
	}
}

func buildSingleKeyLock(address []byte) *transaction.LockingCondition {
	return &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_SingleKeyLock{
			SingleKeyLock: &transaction.SingleKeyLock{
				KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
					RequiredAddressHash: append([]byte(nil), address...),
				},
			},
		},
	}
}

func buildContractLock(contractAddr []byte) *transaction.LockingCondition {
	return &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_ContractLock{
			ContractLock: &transaction.ContractLock{
				ContractAddress: append([]byte(nil), contractAddr...),
			},
		},
	}
}

// AddCustomInput æ·»åŠ è‡ªå®šä¹‰è¾“å…¥ï¼ˆé«˜çº§ç”¨æ³•ï¼‰
//
// ğŸ¯ ç”¨é€”ï¼šåˆçº¦æ˜¾å¼æŒ‡å®šè¾“å…¥ UTXOï¼ˆç»•è¿‡è‡ªåŠ¨é€‰æ‹©ï¼‰
//
// å‚æ•°ï¼š
//   - ctx: æ‰§è¡Œä¸Šä¸‹æ–‡
//   - draftHandle: Draft å¥æŸ„
//   - outpoint: UTXO å¼•ç”¨
//   - isReferenceOnly: æ˜¯å¦ä»…å¼•ç”¨ï¼ˆtrue=ä¸æ¶ˆè´¹ï¼‰
//
// è¿”å›ï¼š
//   - inputIndex: è¾“å…¥ç´¢å¼•ï¼ˆä» 0 å¼€å§‹ï¼‰
//   - error: é”™è¯¯ä¿¡æ¯
func (a *txAdapterImpl) AddCustomInput(
	ctx context.Context,
	draftHandle int32,
	outpoint *transaction.OutPoint,
	isReferenceOnly bool,
) (int32, error) {
	// 1. è·å– Draft
	draft, err := a.draftManager.GetDraft(ctx, draftHandle)
	if err != nil {
		return 0, fmt.Errorf("è·å– Draft å¤±è´¥: %w", err)
	}

	// 2. è°ƒç”¨ DraftService æ·»åŠ è¾“å…¥
	inputIndex, err := a.draftService.AddInput(ctx, draft, outpoint, isReferenceOnly, nil)
	if err != nil {
		return 0, fmt.Errorf("æ·»åŠ è¾“å…¥å¤±è´¥: %w", err)
	}

	// è¿”å›è¾“å…¥ç´¢å¼•
	return int32(inputIndex), nil
}

// AddCustomOutput æ·»åŠ è‡ªå®šä¹‰è¾“å‡ºï¼ˆé«˜çº§ç”¨æ³•ï¼‰
//
// ğŸ¯ ç”¨é€”ï¼šåˆçº¦æ˜¾å¼æ„å»ºè¾“å‡ºï¼ˆæ”¯æŒå¤æ‚é”å®šæ¡ä»¶ï¼‰
//
// å‚æ•°ï¼š
//   - ctx: æ‰§è¡Œä¸Šä¸‹æ–‡
//   - draftHandle: Draft å¥æŸ„
//   - output: äº¤æ˜“è¾“å‡º
//
// è¿”å›ï¼š
//   - outputIndex: è¾“å‡ºç´¢å¼•ï¼ˆä» 0 å¼€å§‹ï¼‰
//   - error: é”™è¯¯ä¿¡æ¯
func (a *txAdapterImpl) AddCustomOutput(
	ctx context.Context,
	draftHandle int32,
	output *transaction.TxOutput,
) (int32, error) {
	// 1. è·å– Draft
	draft, err := a.draftManager.GetDraft(ctx, draftHandle)
	if err != nil {
		return 0, fmt.Errorf("è·å– Draft å¤±è´¥: %w", err)
	}

	// 2. æ·»åŠ è¾“å‡ºåˆ° Draftï¼ˆç›´æ¥æ·»åŠ åˆ°åº•å±‚äº¤æ˜“å¯¹è±¡ï¼‰
	draft.Tx.Outputs = append(draft.Tx.Outputs, output)

	// è¿”å›è¾“å‡ºç´¢å¼•
	return int32(len(draft.Tx.Outputs) - 1), nil
}

// GetDraft è·å–Draftå¯¹è±¡ï¼ˆé«˜çº§ç”¨æ³•ï¼‰
//
// ğŸ¯ ç”¨é€”ï¼šç”¨äºä¿®æ”¹è¾“å‡ºçš„é”å®šæ¡ä»¶ï¼ˆdelegated/thresholdæ¨¡å¼ï¼‰
func (a *txAdapterImpl) GetDraft(
	ctx context.Context,
	draftHandle int32,
) (*types.DraftTx, error) {
	return a.draftManager.GetDraft(ctx, draftHandle)
}

// FinalizeTransaction å®Œæˆäº¤æ˜“æ„å»º
//
// ğŸ”„ æµç¨‹ï¼š
//  1. Seal Draft â†’ ComposedTx
//  2. è°ƒç”¨ Verifier éªŒè¯ï¼ˆAuthZ + Conservation + Conditionï¼‰
//  3. éªŒè¯å¤±è´¥è¿”å›é”™è¯¯ï¼ˆè§¦å‘åˆçº¦å›æ»šï¼‰
//  4. éªŒè¯é€šè¿‡è¿”å›æœªç­¾åäº¤æ˜“
//
// å‚æ•°ï¼š
//   - ctx: æ‰§è¡Œä¸Šä¸‹æ–‡
//   - draftHandle: Draft å¥æŸ„
//
// è¿”å›ï¼š
//   - tx: æœªç­¾åçš„äº¤æ˜“ï¼ˆéœ€å¤–éƒ¨ç­¾åï¼‰
//   - error: é”™è¯¯ä¿¡æ¯
func (a *txAdapterImpl) FinalizeTransaction(
	ctx context.Context,
	draftHandle int32,
) (*transaction.Transaction, error) {
	// 1. è·å– Draft
	draft, err := a.draftManager.GetDraft(ctx, draftHandle)
	if err != nil {
		return nil, fmt.Errorf("è·å– Draft å¤±è´¥: %w", err)
	}

	// 2. éªŒè¯ Draft éç©º
	if len(draft.Tx.Inputs) == 0 && len(draft.Tx.Outputs) == 0 {
		return nil, fmt.Errorf("äº¤æ˜“ä¸ºç©ºï¼šæ²¡æœ‰è¾“å…¥å’Œè¾“å‡º")
	}

	// 3. Seal Draftï¼ˆæ ‡è®°ä¸ºä¸å¯ä¿®æ”¹ï¼‰
	draft.IsSealed = true

	// 4. è¿”å›æœªç­¾åäº¤æ˜“ï¼ˆéªŒè¯åœ¨ç­¾ååè¿›è¡Œï¼‰
	return draft.Tx, nil
}

// CleanupDraft æ¸…ç† Draftï¼ˆå¯é€‰ï¼Œæ‰§è¡Œç»“æŸè‡ªåŠ¨è°ƒç”¨ï¼‰
//
// å‚æ•°ï¼š
//   - ctx: æ‰§è¡Œä¸Šä¸‹æ–‡
//   - draftHandle: Draft å¥æŸ„
//
// è¿”å›ï¼š
//   - error: é”™è¯¯ä¿¡æ¯
func (a *txAdapterImpl) CleanupDraft(
	ctx context.Context,
	draftHandle int32,
) error {
	return a.draftManager.RemoveDraft(ctx, draftHandle)
}
