package builder

import (
	"bytes"
	"context"
	"fmt"
	"math/big"

	transaction_pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxo_pb "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/constants"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
)

// SponsorUTXOHelper èµåŠ©UTXOè¾…åŠ©å·¥å…·
//
// ğŸ¯ **æ ¸å¿ƒèŒè´£**ï¼šåŸºäºEUTXOç³»ç»Ÿæä¾›èµåŠ©UTXOçš„è¯†åˆ«ã€å…ƒæ•°æ®æå–å’Œç”Ÿå‘½å‘¨æœŸç®¡ç†
//
// ğŸ’¡ **è®¾è®¡ç†å¿µ**ï¼š
// - ä¸¥æ ¼éµå¾ªEUTXOåŸåˆ™ï¼šæ‰€æœ‰æ•°æ®æ¥æºäºUTXOæœ¬èº«
// - ä¸åˆ›å»ºæ–°çš„å­˜å‚¨ç»“æ„ï¼Œé€šè¿‡æŸ¥è¯¢å’Œè®¡ç®—è·å–ä¿¡æ¯
// - æä¾›ç»Ÿä¸€çš„è¾…åŠ©æ¥å£ï¼Œç®€åŒ–èµåŠ©UTXOçš„ä½¿ç”¨
type SponsorUTXOHelper struct {
	eutxoQuery persistence.UTXOQuery
}

// NewSponsorUTXOHelper åˆ›å»ºèµåŠ©UTXOè¾…åŠ©å·¥å…·
func NewSponsorUTXOHelper(eutxoQuery persistence.UTXOQuery) *SponsorUTXOHelper {
	return &SponsorUTXOHelper{
		eutxoQuery: eutxoQuery,
	}
}

// SponsorMetadata èµåŠ©UTXOçš„å…ƒæ•°æ®
//
// **è®¾è®¡è¯´æ˜**ï¼ˆåŸºäºæ¶æ„åˆ†ææ–‡æ¡£ï¼‰ï¼š
// - å…ƒæ•°æ®é€šè¿‡æŸ¥è¯¢å’Œè®¡ç®—è·å¾—ï¼Œä¸å­˜å‚¨åœ¨UTXOä¸­
// - ä»DelegationLocké…ç½®å’ŒUTXOå±æ€§æ¨æ–­å…ƒæ•°æ®
// - ç”¨äºæŸ¥è¯¢ã€å±•ç¤ºå’Œå®¡è®¡ï¼Œä¸å‚ä¸éªŒè¯é€»è¾‘
type SponsorMetadata struct {
	// èµåŠ©æ–¹ä¿¡æ¯ï¼ˆä»UTXOæ¨æ–­ï¼‰
	SponsorAddress []byte   // é€šå¸¸æ— æ³•ç›´æ¥è·å–ï¼Œå¯èƒ½ä¸ºnil
	TokenType      string   // ä»£å¸ç±»å‹ï¼ˆnative/contract:xxx:yyyï¼‰
	TotalAmount    *big.Int // æ€»é‡‘é¢ï¼ˆä»AssetOutputæå–ï¼‰

	// é™åˆ¶æ¡ä»¶ï¼ˆä»DelegationLockæå–ï¼‰
	MaxPerClaim  *big.Int // å•æ¬¡æœ€å¤§é¢†å–é‡‘é¢ï¼ˆDelegationLock.MaxValuePerOperationï¼‰
	ExpiryHeight uint64   // è¿‡æœŸé«˜åº¦ï¼ˆä»DelegationLock.ExpiryDurationBlocksè®¡ç®—ï¼‰

	// UTXOä¿¡æ¯
	CreationHeight uint64                      // åˆ›å»ºé«˜åº¦ï¼ˆUTXO.block_heightï¼‰
	CreationTime   uint64                      // åˆ›å»ºæ—¶é—´ï¼ˆUTXO.created_timestampï¼‰
	CurrentStatus  utxo_pb.UTXOLifecycleStatus // å½“å‰çŠ¶æ€ï¼ˆUTXO.statusï¼‰

	// æè¿°ä¿¡æ¯ï¼ˆé€šå¸¸æ— æ³•è·å–ï¼Œç•™ç©ºï¼‰
	Description string
	Purpose     string
}

// SponsorLifecycleState èµåŠ©UTXOçš„ä¸šåŠ¡ç”Ÿå‘½å‘¨æœŸçŠ¶æ€
//
// **è®¾è®¡è¯´æ˜**ï¼š
// - åŸºäºUTXOçš„statuså’ŒæŸ¥è¯¢æ¥å£è®¡ç®—
// - ä¸åŒäºUTXOLifecycleStatusï¼Œè¿™æ˜¯ä¸šåŠ¡å±‚é¢çš„çŠ¶æ€
type SponsorLifecycleState string

const (
	// SponsorStateCreated å·²åˆ›å»ºï¼ˆåˆšä¸Šé“¾ï¼ŒAVAILABLEçŠ¶æ€ï¼‰
	SponsorStateCreated SponsorLifecycleState = "created"

	// SponsorStateActive æ´»è·ƒä¸­ï¼ˆAVAILABLEçŠ¶æ€ï¼Œå¯é¢†å–ï¼‰
	SponsorStateActive SponsorLifecycleState = "active"

	// SponsorStatePartialClaimed éƒ¨åˆ†é¢†å–ï¼ˆæœ‰æ‰¾é›¶å›æ± ï¼ŒUTXOä»å­˜åœ¨ï¼‰
	SponsorStatePartialClaimed SponsorLifecycleState = "partial_claimed"

	// SponsorStateFullyClaimed å…¨éƒ¨é¢†å–ï¼ˆUTXOå·²è¢«æ¶ˆè´¹ï¼ŒCONSUMEDçŠ¶æ€ï¼‰
	SponsorStateFullyClaimed SponsorLifecycleState = "fully_claimed"

	// SponsorStateExpired å·²è¿‡æœŸï¼ˆåŸºäºExpiryHeightè®¡ç®—ï¼‰
	SponsorStateExpired SponsorLifecycleState = "expired"

	// SponsorStateUnknown æœªçŸ¥çŠ¶æ€
	SponsorStateUnknown SponsorLifecycleState = "unknown"
)

// IsSponsorUTXO åˆ¤æ–­UTXOæ˜¯å¦ä¸ºèµåŠ©UTXO
//
// **åˆ¤æ–­æ ‡å‡†**ï¼š
// - Owner = SponsorPoolOwner
// - æœ‰DelegationLocké”å®šæ¡ä»¶
func (h *SponsorUTXOHelper) IsSponsorUTXO(utxo *utxo_pb.UTXO) bool {
	if utxo == nil {
		return false
	}

	output := utxo.GetCachedOutput()
	if output == nil {
		return false
	}

	// æ£€æŸ¥Owner
	if !bytes.Equal(output.Owner, constants.SponsorPoolOwner[:]) {
		return false
	}

	// æ£€æŸ¥æ˜¯å¦æœ‰DelegationLock
	for _, lock := range output.LockingConditions {
		if lock.GetDelegationLock() != nil {
			return true
		}
	}

	return false
}

// ExtractMetadata ä»UTXOæå–èµåŠ©å…ƒæ•°æ®
//
// **æå–ç­–ç•¥**ï¼š
// - ä»DelegationLocké…ç½®æå–é™åˆ¶æ¡ä»¶
// - ä»AssetOutputæå–ä»£å¸ç±»å‹å’Œé‡‘é¢
// - ä»UTXOå±æ€§æå–åˆ›å»ºä¿¡æ¯
func (h *SponsorUTXOHelper) ExtractMetadata(utxo *utxo_pb.UTXO) (*SponsorMetadata, error) {
	if !h.IsSponsorUTXO(utxo) {
		return nil, fmt.Errorf("ä¸æ˜¯èµåŠ©UTXO")
	}

	output := utxo.GetCachedOutput()
	if output == nil {
		return nil, fmt.Errorf("UTXOç¼ºå°‘CachedOutput")
	}

	// æå–DelegationLock
	var delegationLock *transaction_pb.DelegationLock
	for _, lock := range output.LockingConditions {
		if dl := lock.GetDelegationLock(); dl != nil {
			delegationLock = dl
			break
		}
	}
	if delegationLock == nil {
		return nil, fmt.Errorf("èµåŠ©UTXOç¼ºå°‘DelegationLock")
	}

	// æå–AssetOutputä¿¡æ¯
	asset := output.GetAsset()
	if asset == nil {
		return nil, fmt.Errorf("èµåŠ©UTXOå¿…é¡»æ˜¯èµ„äº§è¾“å‡º")
	}

	// æå–ä»£å¸ç±»å‹å’Œé‡‘é¢
	tokenType := h.extractTokenType(asset)
	totalAmount := h.extractAmount(asset)

	// æ„å»ºå…ƒæ•°æ®
	metadata := &SponsorMetadata{
		SponsorAddress: nil, // æ— æ³•ä»UTXOç›´æ¥è·å–
		TokenType:      tokenType,
		TotalAmount:    totalAmount,
		MaxPerClaim:    big.NewInt(int64(delegationLock.MaxValuePerOperation)),
		CreationHeight: utxo.BlockHeight,
		CreationTime:   utxo.CreatedTimestamp,
		CurrentStatus:  utxo.Status,
		Description:    "", // æ— æ³•ä»UTXOè·å–
		Purpose:        "", // æ— æ³•ä»UTXOè·å–
	}

	// è®¡ç®—è¿‡æœŸé«˜åº¦ï¼ˆå¦‚æœæœ‰ExpiryDurationBlocksï¼‰
	if delegationLock.ExpiryDurationBlocks != nil {
		metadata.ExpiryHeight = utxo.BlockHeight + *delegationLock.ExpiryDurationBlocks
	}

	return metadata, nil
}

// GetLifecycleState è·å–èµåŠ©UTXOçš„ç”Ÿå‘½å‘¨æœŸçŠ¶æ€
//
// **çŠ¶æ€è®¡ç®—é€»è¾‘**ï¼š
// - Created: AVAILABLEçŠ¶æ€ï¼Œåˆšåˆ›å»º
// - Active: AVAILABLEçŠ¶æ€ï¼Œæœªè¿‡æœŸ
// - PartialClaimed: AVAILABLEçŠ¶æ€ï¼Œä½†é‡‘é¢å¯èƒ½å·²éƒ¨åˆ†é¢†å–ï¼ˆéœ€è¦é€šè¿‡æŸ¥è¯¢å†å²è®¡ç®—ï¼‰
// - FullyClaimed: CONSUMEDçŠ¶æ€
// - Expired: åŸºäºExpiryHeightè®¡ç®—
func (h *SponsorUTXOHelper) GetLifecycleState(
	ctx context.Context,
	utxo *utxo_pb.UTXO,
	currentHeight uint64,
) (SponsorLifecycleState, error) {
	if !h.IsSponsorUTXO(utxo) {
		return SponsorStateUnknown, fmt.Errorf("ä¸æ˜¯èµåŠ©UTXO")
	}

	metadata, err := h.ExtractMetadata(utxo)
	if err != nil {
		return SponsorStateUnknown, fmt.Errorf("æå–å…ƒæ•°æ®å¤±è´¥: %w", err)
	}

	// æ£€æŸ¥æ˜¯å¦å·²æ¶ˆè´¹
	if utxo.Status == utxo_pb.UTXOLifecycleStatus_UTXO_LIFECYCLE_CONSUMED {
		return SponsorStateFullyClaimed, nil
	}

	// æ£€æŸ¥æ˜¯å¦è¿‡æœŸ
	if metadata.ExpiryHeight > 0 && currentHeight > metadata.ExpiryHeight {
		return SponsorStateExpired, nil
	}

	// æ£€æŸ¥æ˜¯å¦åˆšåˆ›å»ºï¼ˆå¯é€‰ï¼šå¯ä»¥æ ¹æ®åˆ›å»ºæ—¶é—´åˆ¤æ–­ï¼‰
	if utxo.Status == utxo_pb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE {
		// å°è¯•åˆ¤æ–­æ˜¯å¦éƒ¨åˆ†é¢†å–ï¼šé€šè¿‡UTXOå½“å‰é‡‘é¢åˆ¤æ–­
		// æ³¨æ„ï¼šå®Œæ•´å®ç°éœ€è¦æŸ¥è¯¢å†å²äº¤æ˜“ï¼Œå½“å‰é€šè¿‡UTXOå½“å‰é‡‘é¢åˆ¤æ–­
		cachedOutput := utxo.GetCachedOutput()
		if cachedOutput != nil {
			assetOutput := cachedOutput.GetAsset()
			if assetOutput != nil {
				currentAmount := h.extractAmount(assetOutput)
				if currentAmount != nil && currentAmount.Cmp(metadata.TotalAmount) < 0 && currentAmount.Sign() > 0 {
					// å½“å‰é‡‘é¢ < æ€»é‡‘é¢ ä¸” > 0ï¼Œå¯èƒ½å·²éƒ¨åˆ†é¢†å–
					// ä½†æ›´å‡†ç¡®çš„åˆ¤æ–­éœ€è¦æŸ¥è¯¢å†å²äº¤æ˜“ï¼ˆéœ€è¦æ‰©å±•TxQueryæ¥å£ï¼‰
					return SponsorStatePartialClaimed, nil
				}
			}
		}
		return SponsorStateActive, nil
	}

	return SponsorStateUnknown, nil
}

// ValidateSponsorUTXO éªŒè¯èµåŠ©UTXOæ˜¯å¦ç¬¦åˆæ ‡å‡†ç»“æ„
//
// **éªŒè¯å†…å®¹**ï¼š
// - Owner = SponsorPoolOwner
// - æœ‰DelegationLock
// - DelegationLockæˆæƒconsumeæ“ä½œ
// - æ˜¯AssetOutput
func (h *SponsorUTXOHelper) ValidateSponsorUTXO(utxo *utxo_pb.UTXO) error {
	if !h.IsSponsorUTXO(utxo) {
		return fmt.Errorf("ä¸æ˜¯èµåŠ©UTXO")
	}

	output := utxo.GetCachedOutput()
	if output == nil {
		return fmt.Errorf("UTXOç¼ºå°‘CachedOutput")
	}

	// éªŒè¯Owner
	if !bytes.Equal(output.Owner, constants.SponsorPoolOwner[:]) {
		return fmt.Errorf("Ownerå¿…é¡»æ˜¯SponsorPoolOwner")
	}

	// éªŒè¯æœ‰DelegationLock
	var delegationLock *transaction_pb.DelegationLock
	for _, lock := range output.LockingConditions {
		if dl := lock.GetDelegationLock(); dl != nil {
			delegationLock = dl
			break
		}
	}
	if delegationLock == nil {
		return fmt.Errorf("ç¼ºå°‘DelegationLock")
	}

	// éªŒè¯æˆæƒconsumeæ“ä½œ
	hasConsume := false
	for _, op := range delegationLock.AuthorizedOperations {
		if op == "consume" {
			hasConsume = true
			break
		}
	}
	if !hasConsume {
		return fmt.Errorf("DelegationLockæœªæˆæƒconsumeæ“ä½œ")
	}

	// éªŒè¯æ˜¯AssetOutput
	if output.GetAsset() == nil {
		return fmt.Errorf("å¿…é¡»æ˜¯AssetOutput")
	}

	return nil
}

// è¾…åŠ©æ–¹æ³•

func (h *SponsorUTXOHelper) extractTokenType(asset *transaction_pb.AssetOutput) string {
	if nc := asset.GetNativeCoin(); nc != nil {
		return "native"
	}
	if ct := asset.GetContractToken(); ct != nil {
		contractAddr := fmt.Sprintf("%x", ct.ContractAddress)
		switch ti := ct.TokenIdentifier.(type) {
		case *transaction_pb.ContractTokenAsset_FungibleClassId:
			return fmt.Sprintf("contract:%s:%x", contractAddr, ti.FungibleClassId)
		case *transaction_pb.ContractTokenAsset_NftUniqueId:
			return fmt.Sprintf("contract:%s:nft:%x", contractAddr, ti.NftUniqueId)
		case *transaction_pb.ContractTokenAsset_SemiFungibleId:
			return fmt.Sprintf("contract:%s:sft:%x:%d", contractAddr, ti.SemiFungibleId.BatchId, ti.SemiFungibleId.InstanceId)
		}
	}
	return "unknown"
}

func (h *SponsorUTXOHelper) extractAmount(asset *transaction_pb.AssetOutput) *big.Int {
	var amountStr string
	if nc := asset.GetNativeCoin(); nc != nil {
		amountStr = nc.Amount
	} else if ct := asset.GetContractToken(); ct != nil {
		amountStr = ct.Amount
	} else {
		return big.NewInt(0)
	}

	amount, ok := new(big.Int).SetString(amountStr, 10)
	if !ok {
		return big.NewInt(0)
	}
	return amount
}
