// Package builder_test æä¾› SponsorUTXOHelper çš„å•å…ƒæµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•è¦†ç›–**ï¼š
// - SponsorUTXOHelper æ ¸å¿ƒåŠŸèƒ½æµ‹è¯•
// - èµåŠ©UTXOè¯†åˆ«æµ‹è¯•
// - å…ƒæ•°æ®æå–æµ‹è¯•
// - ç”Ÿå‘½å‘¨æœŸçŠ¶æ€æµ‹è¯•
// - éªŒè¯åŠŸèƒ½æµ‹è¯•
package builder

import (
	"context"
	"math/big"
	"testing"

	"github.com/stretchr/testify/assert"

	"github.com/weisyn/v1/internal/core/tx/testutil"
	transaction_pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxopb "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/constants"
)

// ==================== NewSponsorUTXOHelper æµ‹è¯• ====================

// TestNewSponsorUTXOHelper æµ‹è¯•åˆ›å»º SponsorUTXOHelper
func TestNewSponsorUTXOHelper(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()

	helper := NewSponsorUTXOHelper(utxoQuery)

	assert.NotNil(t, helper)
	assert.Equal(t, utxoQuery, helper.eutxoQuery)
}

// ==================== IsSponsorUTXO æµ‹è¯• ====================

// TestIsSponsorUTXO_Success æµ‹è¯•è¯†åˆ«èµåŠ©UTXOæˆåŠŸ
func TestIsSponsorUTXO_Success(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºèµåŠ©UTXO
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)

	result := helper.IsSponsorUTXO(sponsorUTXO)

	assert.True(t, result)
}

// TestIsSponsorUTXO_NilUTXO æµ‹è¯•nil UTXO
func TestIsSponsorUTXO_NilUTXO(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	result := helper.IsSponsorUTXO(nil)

	assert.False(t, result)
}

// TestIsSponsorUTXO_NoCachedOutput æµ‹è¯•æ²¡æœ‰CachedOutput
func TestIsSponsorUTXO_NoCachedOutput(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºæ²¡æœ‰CachedOutputçš„UTXO
	outpoint := testutil.CreateOutPoint(nil, 0)
	utxo := &utxopb.UTXO{
		Outpoint:     outpoint,
		Category:     utxopb.UTXOCategory_UTXO_CATEGORY_ASSET,
		Status:       utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE,
		OwnerAddress: constants.SponsorPoolOwner[:],
		// æ²¡æœ‰CachedOutput
	}

	result := helper.IsSponsorUTXO(utxo)

	assert.False(t, result)
}

// TestIsSponsorUTXO_WrongOwner æµ‹è¯•é”™è¯¯çš„Owner
func TestIsSponsorUTXO_WrongOwner(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºOwnerä¸æ˜¯SponsorPoolOwnerçš„UTXO
	outpoint := testutil.CreateOutPoint(nil, 0)
	delegationLock := &transaction_pb.DelegationLock{
		AuthorizedOperations: []string{"consume"},
		MaxValuePerOperation:  1000000,
	}
	lock := &transaction_pb.LockingCondition{
		Condition: &transaction_pb.LockingCondition_DelegationLock{
			DelegationLock: delegationLock,
		},
	}
	output := testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000000", lock)
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	result := helper.IsSponsorUTXO(utxo)

	assert.False(t, result)
}

// TestIsSponsorUTXO_NoDelegationLock æµ‹è¯•æ²¡æœ‰DelegationLock
func TestIsSponsorUTXO_NoDelegationLock(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºåªæœ‰SingleKeyLockçš„UTXO
	outpoint := testutil.CreateOutPoint(nil, 0)
	output := testutil.CreateNativeCoinOutput(constants.SponsorPoolOwner[:], "1000000", testutil.CreateSingleKeyLock(nil))
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	result := helper.IsSponsorUTXO(utxo)

	assert.False(t, result)
}

// ==================== ExtractMetadata æµ‹è¯• ====================

// TestExtractMetadata_Success æµ‹è¯•æå–å…ƒæ•°æ®æˆåŠŸ
func TestExtractMetadata_Success(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºèµåŠ©UTXO
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)
	sponsorUTXO.CreatedTimestamp = 1234567890

	metadata, err := helper.ExtractMetadata(sponsorUTXO)

	assert.NoError(t, err)
	assert.NotNil(t, metadata)
	assert.Equal(t, "native", metadata.TokenType)
	assert.Equal(t, big.NewInt(1000000), metadata.TotalAmount)
	assert.Equal(t, big.NewInt(1000000), metadata.MaxPerClaim)
	assert.Equal(t, uint64(100), metadata.CreationHeight)
	assert.Equal(t, uint64(1234567890), metadata.CreationTime)
	assert.Equal(t, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE, metadata.CurrentStatus)
	assert.Equal(t, uint64(0), metadata.ExpiryHeight) // æ²¡æœ‰è®¾ç½®è¿‡æœŸæ—¶é—´
}

// TestExtractMetadata_WithExpiry æµ‹è¯•æœ‰è¿‡æœŸæ—¶é—´çš„å…ƒæ•°æ®æå–
func TestExtractMetadata_WithExpiry(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºæœ‰è¿‡æœŸæ—¶é—´çš„èµåŠ©UTXO
	expiryBlocks := uint64(50)
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, &expiryBlocks, 100)

	metadata, err := helper.ExtractMetadata(sponsorUTXO)

	assert.NoError(t, err)
	assert.NotNil(t, metadata)
	assert.Equal(t, uint64(150), metadata.ExpiryHeight) // 100 + 50
}

// TestExtractMetadata_NotSponsorUTXO æµ‹è¯•ä¸æ˜¯èµåŠ©UTXO
func TestExtractMetadata_NotSponsorUTXO(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºæ™®é€šUTXO
	outpoint := testutil.CreateOutPoint(nil, 0)
	output := testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000000", testutil.CreateSingleKeyLock(nil))
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	metadata, err := helper.ExtractMetadata(utxo)

	assert.Error(t, err)
	assert.Nil(t, metadata)
	assert.Contains(t, err.Error(), "ä¸æ˜¯èµåŠ©UTXO")
}

// TestExtractMetadata_NoCachedOutput æµ‹è¯•æ²¡æœ‰CachedOutput
func TestExtractMetadata_NoCachedOutput(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºæ²¡æœ‰CachedOutputçš„UTXO
	// æ³¨æ„ï¼šExtractMetadata é¦–å…ˆè°ƒç”¨ IsSponsorUTXOï¼Œå¦‚æœæ²¡æœ‰CachedOutputä¼šç›´æ¥è¿”å›"ä¸æ˜¯èµåŠ©UTXO"
	outpoint := testutil.CreateOutPoint(nil, 0)
	utxo := &utxopb.UTXO{
		Outpoint:     outpoint,
		Category:     utxopb.UTXOCategory_UTXO_CATEGORY_ASSET,
		Status:       utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE,
		OwnerAddress: constants.SponsorPoolOwner[:],
		BlockHeight:  100,
		// æ²¡æœ‰CachedOutput
	}

	metadata, err := helper.ExtractMetadata(utxo)

	assert.Error(t, err)
	assert.Nil(t, metadata)
	// ExtractMetadata é¦–å…ˆè°ƒç”¨ IsSponsorUTXOï¼Œå¦‚æœæ²¡æœ‰CachedOutputä¼šç›´æ¥è¿”å›"ä¸æ˜¯èµåŠ©UTXO"
	assert.Contains(t, err.Error(), "ä¸æ˜¯èµåŠ©UTXO")
}

// TestExtractMetadata_NoDelegationLock æµ‹è¯•æ²¡æœ‰DelegationLock
func TestExtractMetadata_NoDelegationLock(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºåªæœ‰SingleKeyLockçš„UTXOï¼ˆä½†Owneræ˜¯SponsorPoolOwnerï¼‰
	// æ³¨æ„ï¼šExtractMetadata é¦–å…ˆè°ƒç”¨ IsSponsorUTXOï¼Œå¦‚æœæ²¡æœ‰DelegationLockä¼šç›´æ¥è¿”å›"ä¸æ˜¯èµåŠ©UTXO"
	outpoint := testutil.CreateOutPoint(nil, 0)
	output := testutil.CreateNativeCoinOutput(constants.SponsorPoolOwner[:], "1000000", testutil.CreateSingleKeyLock(nil))
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	metadata, err := helper.ExtractMetadata(utxo)

	assert.Error(t, err)
	assert.Nil(t, metadata)
	// ExtractMetadata é¦–å…ˆè°ƒç”¨ IsSponsorUTXOï¼Œå¦‚æœæ²¡æœ‰DelegationLockä¼šç›´æ¥è¿”å›"ä¸æ˜¯èµåŠ©UTXO"
	assert.Contains(t, err.Error(), "ä¸æ˜¯èµåŠ©UTXO")
}

// TestExtractMetadata_NotAssetOutput æµ‹è¯•ä¸æ˜¯AssetOutput
func TestExtractMetadata_NotAssetOutput(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºResourceOutputï¼ˆä¸æ˜¯AssetOutputï¼‰
	outpoint := testutil.CreateOutPoint(nil, 0)
	delegationLock := &transaction_pb.DelegationLock{
		AuthorizedOperations: []string{"consume"},
		MaxValuePerOperation:  1000000,
	}
	lock := &transaction_pb.LockingCondition{
		Condition: &transaction_pb.LockingCondition_DelegationLock{
			DelegationLock: delegationLock,
		},
	}
	// åˆ›å»ºç®€å•çš„ResourceOutputï¼ˆåªéœ€è¦Resourceå­—æ®µï¼‰
	output := &transaction_pb.TxOutput{
		Owner: constants.SponsorPoolOwner[:],
		LockingConditions: []*transaction_pb.LockingCondition{lock},
		OutputContent: &transaction_pb.TxOutput_Resource{
			Resource: &transaction_pb.ResourceOutput{
				// Resourceå­—æ®µå¯ä»¥ä¸ºnilï¼Œç”¨äºæµ‹è¯•
			},
		},
	}
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	metadata, err := helper.ExtractMetadata(utxo)

	assert.Error(t, err)
	assert.Nil(t, metadata)
	assert.Contains(t, err.Error(), "å¿…é¡»æ˜¯èµ„äº§è¾“å‡º")
}

// TestExtractMetadata_ContractToken_Fungible æµ‹è¯•åŒè´¨åŒ–åˆçº¦ä»£å¸å…ƒæ•°æ®æå–
func TestExtractMetadata_ContractToken_Fungible(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºåŒè´¨åŒ–åˆçº¦ä»£å¸èµåŠ©UTXO
	contractAddr := testutil.RandomAddress()
	outpoint := testutil.CreateOutPoint(nil, 0)
	delegationLock := &transaction_pb.DelegationLock{
		AuthorizedOperations: []string{"consume"},
		MaxValuePerOperation:  1000000,
	}
	lock := &transaction_pb.LockingCondition{
		Condition: &transaction_pb.LockingCondition_DelegationLock{
			DelegationLock: delegationLock,
		},
	}
	asset := &transaction_pb.AssetOutput{
		AssetContent: &transaction_pb.AssetOutput_ContractToken{
			ContractToken: &transaction_pb.ContractTokenAsset{
				ContractAddress: contractAddr,
				TokenIdentifier: &transaction_pb.ContractTokenAsset_FungibleClassId{
					FungibleClassId: []byte("default"),
				},
				Amount: "500000",
			},
		},
	}
	output := &transaction_pb.TxOutput{
		Owner: constants.SponsorPoolOwner[:],
		LockingConditions: []*transaction_pb.LockingCondition{lock},
		OutputContent: &transaction_pb.TxOutput_Asset{
			Asset: asset,
		},
	}
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)
	utxo.BlockHeight = 200

	metadata, err := helper.ExtractMetadata(utxo)

	assert.NoError(t, err)
	assert.NotNil(t, metadata)
	assert.Contains(t, metadata.TokenType, "contract:")
	assert.Equal(t, big.NewInt(500000), metadata.TotalAmount)
}

// TestExtractMetadata_ContractToken_NFT æµ‹è¯•NFTåˆçº¦ä»£å¸å…ƒæ•°æ®æå–
func TestExtractMetadata_ContractToken_NFT(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºNFTåˆçº¦ä»£å¸èµåŠ©UTXO
	contractAddr := testutil.RandomAddress()
	nftID := testutil.RandomHash()
	outpoint := testutil.CreateOutPoint(nil, 0)
	delegationLock := &transaction_pb.DelegationLock{
		AuthorizedOperations: []string{"consume"},
		MaxValuePerOperation:  1000000,
	}
	lock := &transaction_pb.LockingCondition{
		Condition: &transaction_pb.LockingCondition_DelegationLock{
			DelegationLock: delegationLock,
		},
	}
	asset := &transaction_pb.AssetOutput{
		AssetContent: &transaction_pb.AssetOutput_ContractToken{
			ContractToken: &transaction_pb.ContractTokenAsset{
				ContractAddress: contractAddr,
				TokenIdentifier: &transaction_pb.ContractTokenAsset_NftUniqueId{
					NftUniqueId: nftID,
				},
				Amount: "1",
			},
		},
	}
	output := &transaction_pb.TxOutput{
		Owner: constants.SponsorPoolOwner[:],
		LockingConditions: []*transaction_pb.LockingCondition{lock},
		OutputContent: &transaction_pb.TxOutput_Asset{
			Asset: asset,
		},
	}
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)
	utxo.BlockHeight = 200

	metadata, err := helper.ExtractMetadata(utxo)

	assert.NoError(t, err)
	assert.NotNil(t, metadata)
	assert.Contains(t, metadata.TokenType, "contract:")
	assert.Contains(t, metadata.TokenType, "nft:")
	assert.Equal(t, big.NewInt(1), metadata.TotalAmount)
}

// TestExtractMetadata_ContractToken_SFT æµ‹è¯•SFTåˆçº¦ä»£å¸å…ƒæ•°æ®æå–
func TestExtractMetadata_ContractToken_SFT(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºSFTåˆçº¦ä»£å¸èµåŠ©UTXO
	contractAddr := testutil.RandomAddress()
	batchID := testutil.RandomHash()
	instanceID := uint64(123)
	outpoint := testutil.CreateOutPoint(nil, 0)
	delegationLock := &transaction_pb.DelegationLock{
		AuthorizedOperations: []string{"consume"},
		MaxValuePerOperation:  1000000,
	}
	lock := &transaction_pb.LockingCondition{
		Condition: &transaction_pb.LockingCondition_DelegationLock{
			DelegationLock: delegationLock,
		},
	}
	asset := &transaction_pb.AssetOutput{
		AssetContent: &transaction_pb.AssetOutput_ContractToken{
			ContractToken: &transaction_pb.ContractTokenAsset{
				ContractAddress: contractAddr,
				TokenIdentifier: &transaction_pb.ContractTokenAsset_SemiFungibleId{
					SemiFungibleId: &transaction_pb.SemiFungibleId{
						BatchId:    batchID,
						InstanceId: instanceID,
					},
				},
				Amount: "100",
			},
		},
	}
	output := &transaction_pb.TxOutput{
		Owner: constants.SponsorPoolOwner[:],
		LockingConditions: []*transaction_pb.LockingCondition{lock},
		OutputContent: &transaction_pb.TxOutput_Asset{
			Asset: asset,
		},
	}
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)
	utxo.BlockHeight = 200

	metadata, err := helper.ExtractMetadata(utxo)

	assert.NoError(t, err)
	assert.NotNil(t, metadata)
	assert.Contains(t, metadata.TokenType, "contract:")
	assert.Contains(t, metadata.TokenType, "sft:")
	assert.Equal(t, big.NewInt(100), metadata.TotalAmount)
}

// ==================== GetLifecycleState æµ‹è¯• ====================

// TestGetLifecycleState_Active æµ‹è¯•æ´»è·ƒçŠ¶æ€
func TestGetLifecycleState_Active(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºæ´»è·ƒçš„èµåŠ©UTXO
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)
	currentHeight := uint64(200)

	state, err := helper.GetLifecycleState(context.Background(), sponsorUTXO, currentHeight)

	assert.NoError(t, err)
	assert.Equal(t, SponsorStateActive, state)
}

// TestGetLifecycleState_FullyClaimed æµ‹è¯•å…¨éƒ¨é¢†å–çŠ¶æ€
func TestGetLifecycleState_FullyClaimed(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºå·²æ¶ˆè´¹çš„èµåŠ©UTXO
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)
	sponsorUTXO.Status = utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_CONSUMED
	currentHeight := uint64(200)

	state, err := helper.GetLifecycleState(context.Background(), sponsorUTXO, currentHeight)

	assert.NoError(t, err)
	assert.Equal(t, SponsorStateFullyClaimed, state)
}

// TestGetLifecycleState_Expired æµ‹è¯•å·²è¿‡æœŸçŠ¶æ€
func TestGetLifecycleState_Expired(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºå·²è¿‡æœŸçš„èµåŠ©UTXO
	expiryBlocks := uint64(50)
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, &expiryBlocks, 100)
	currentHeight := uint64(200) // è¶…è¿‡è¿‡æœŸé«˜åº¦ 150

	state, err := helper.GetLifecycleState(context.Background(), sponsorUTXO, currentHeight)

	assert.NoError(t, err)
	assert.Equal(t, SponsorStateExpired, state)
}

// TestGetLifecycleState_PartialClaimed æµ‹è¯•éƒ¨åˆ†é¢†å–çŠ¶æ€
func TestGetLifecycleState_PartialClaimed(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºéƒ¨åˆ†é¢†å–çš„èµåŠ©UTXOï¼ˆå½“å‰é‡‘é¢å°äºæ€»é‡‘é¢ï¼‰
	outpoint := testutil.CreateOutPoint(nil, 0)
	delegationLock := &transaction_pb.DelegationLock{
		AuthorizedOperations: []string{"consume"},
		MaxValuePerOperation:  2000000, // æœ€å¤§é¢†å–é‡‘é¢å¤§äºå½“å‰é‡‘é¢
	}
	lock := &transaction_pb.LockingCondition{
		Condition: &transaction_pb.LockingCondition_DelegationLock{
			DelegationLock: delegationLock,
		},
	}
	// åˆ›å»ºé‡‘é¢è¾ƒå°çš„è¾“å‡ºï¼ˆæ¨¡æ‹Ÿéƒ¨åˆ†é¢†å–åçš„æ‰¾é›¶ï¼‰
	output := testutil.CreateNativeCoinOutput(constants.SponsorPoolOwner[:], "500000", lock)
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)
	utxo.BlockHeight = 100

	currentHeight := uint64(200)

	state, err := helper.GetLifecycleState(context.Background(), utxo, currentHeight)

	assert.NoError(t, err)
	// æ³¨æ„ï¼šç”±äºæ— æ³•å‡†ç¡®åˆ¤æ–­æ˜¯å¦éƒ¨åˆ†é¢†å–ï¼ˆéœ€è¦æŸ¥è¯¢å†å²ï¼‰ï¼Œè¿™é‡Œå¯èƒ½è¿”å›Active
	// ä½†æµ‹è¯•ç”¨ä¾‹å±•ç¤ºäº†éƒ¨åˆ†é¢†å–çš„é€»è¾‘è·¯å¾„
	assert.Contains(t, []SponsorLifecycleState{SponsorStateActive, SponsorStatePartialClaimed}, state)
}

// TestGetLifecycleState_NotSponsorUTXO æµ‹è¯•ä¸æ˜¯èµåŠ©UTXO
func TestGetLifecycleState_NotSponsorUTXO(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºæ™®é€šUTXO
	outpoint := testutil.CreateOutPoint(nil, 0)
	output := testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000000", testutil.CreateSingleKeyLock(nil))
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	state, err := helper.GetLifecycleState(context.Background(), utxo, 200)

	assert.Error(t, err)
	assert.Equal(t, SponsorStateUnknown, state)
	assert.Contains(t, err.Error(), "ä¸æ˜¯èµåŠ©UTXO")
}

// ==================== ValidateSponsorUTXO æµ‹è¯• ====================

// TestValidateSponsorUTXO_Success æµ‹è¯•éªŒè¯æˆåŠŸ
func TestValidateSponsorUTXO_Success(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºæœ‰æ•ˆçš„èµåŠ©UTXO
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"consume"}, nil, 100)

	err := helper.ValidateSponsorUTXO(sponsorUTXO)

	assert.NoError(t, err)
}

// TestValidateSponsorUTXO_NotSponsorUTXO æµ‹è¯•ä¸æ˜¯èµåŠ©UTXO
func TestValidateSponsorUTXO_NotSponsorUTXO(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºæ™®é€šUTXO
	outpoint := testutil.CreateOutPoint(nil, 0)
	output := testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000000", testutil.CreateSingleKeyLock(nil))
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	err := helper.ValidateSponsorUTXO(utxo)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ä¸æ˜¯èµåŠ©UTXO")
}

// TestValidateSponsorUTXO_WrongOwner æµ‹è¯•é”™è¯¯çš„Owner
func TestValidateSponsorUTXO_WrongOwner(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºOwnerä¸æ˜¯SponsorPoolOwnerçš„UTXO
	// æ³¨æ„ï¼šValidateSponsorUTXO é¦–å…ˆè°ƒç”¨ IsSponsorUTXOï¼Œå¦‚æœä¸æ˜¯èµåŠ©UTXOä¼šç›´æ¥è¿”å›é”™è¯¯
	outpoint := testutil.CreateOutPoint(nil, 0)
	delegationLock := &transaction_pb.DelegationLock{
		AuthorizedOperations: []string{"consume"},
		MaxValuePerOperation:  1000000,
	}
	lock := &transaction_pb.LockingCondition{
		Condition: &transaction_pb.LockingCondition_DelegationLock{
			DelegationLock: delegationLock,
		},
	}
	output := testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000000", lock)
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	err := helper.ValidateSponsorUTXO(utxo)

	// ValidateSponsorUTXO é¦–å…ˆè°ƒç”¨ IsSponsorUTXOï¼Œå¦‚æœä¸æ˜¯èµåŠ©UTXOä¼šç›´æ¥è¿”å›"ä¸æ˜¯èµåŠ©UTXO"
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ä¸æ˜¯èµåŠ©UTXO")
}

// TestValidateSponsorUTXO_NoDelegationLock æµ‹è¯•æ²¡æœ‰DelegationLock
func TestValidateSponsorUTXO_NoDelegationLock(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºåªæœ‰SingleKeyLockçš„UTXO
	// æ³¨æ„ï¼šValidateSponsorUTXO é¦–å…ˆè°ƒç”¨ IsSponsorUTXOï¼Œå¦‚æœä¸æ˜¯èµåŠ©UTXOä¼šç›´æ¥è¿”å›é”™è¯¯
	outpoint := testutil.CreateOutPoint(nil, 0)
	output := testutil.CreateNativeCoinOutput(constants.SponsorPoolOwner[:], "1000000", testutil.CreateSingleKeyLock(nil))
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	err := helper.ValidateSponsorUTXO(utxo)

	// ValidateSponsorUTXO é¦–å…ˆè°ƒç”¨ IsSponsorUTXOï¼Œå¦‚æœä¸æ˜¯èµåŠ©UTXOä¼šç›´æ¥è¿”å›"ä¸æ˜¯èµåŠ©UTXO"
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ä¸æ˜¯èµåŠ©UTXO")
}

// TestValidateSponsorUTXO_NoConsumeOperation æµ‹è¯•æ²¡æœ‰consumeæ“ä½œæˆæƒ
func TestValidateSponsorUTXO_NoConsumeOperation(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºåªæœ‰transferæˆæƒçš„UTXO
	sponsorUTXO := createSponsorUTXOForTest("1000000", []string{"transfer"}, nil, 100)

	err := helper.ValidateSponsorUTXO(sponsorUTXO)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "æœªæˆæƒconsumeæ“ä½œ")
}

// TestValidateSponsorUTXO_NotAssetOutput æµ‹è¯•ä¸æ˜¯AssetOutput
func TestValidateSponsorUTXO_NotAssetOutput(t *testing.T) {
	utxoQuery := testutil.NewMockUTXOQuery()
	helper := NewSponsorUTXOHelper(utxoQuery)

	// åˆ›å»ºResourceOutput
	outpoint := testutil.CreateOutPoint(nil, 0)
	delegationLock := &transaction_pb.DelegationLock{
		AuthorizedOperations: []string{"consume"},
		MaxValuePerOperation:  1000000,
	}
	lock := &transaction_pb.LockingCondition{
		Condition: &transaction_pb.LockingCondition_DelegationLock{
			DelegationLock: delegationLock,
		},
	}
	output := &transaction_pb.TxOutput{
		Owner: constants.SponsorPoolOwner[:],
		LockingConditions: []*transaction_pb.LockingCondition{lock},
		OutputContent: &transaction_pb.TxOutput_Resource{
			Resource: &transaction_pb.ResourceOutput{
				// Resourceå­—æ®µå¯ä»¥ä¸ºnilï¼Œç”¨äºæµ‹è¯•
			},
		},
	}
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)

	err := helper.ValidateSponsorUTXO(utxo)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "å¿…é¡»æ˜¯AssetOutput")
}

// ==================== è¾…åŠ©å‡½æ•° ====================

// createSponsorUTXOForTest åˆ›å»ºæµ‹è¯•ç”¨çš„èµåŠ©UTXO
func createSponsorUTXOForTest(amount string, authorizedOps []string, expiryBlocks *uint64, blockHeight uint64) *utxopb.UTXO {
	outpoint := testutil.CreateOutPoint(nil, 0)
	delegationLock := &transaction_pb.DelegationLock{
		AuthorizedOperations: authorizedOps,
		MaxValuePerOperation:  1000000,
		ExpiryDurationBlocks:  expiryBlocks,
		AllowedDelegates:      nil,
	}
	lock := &transaction_pb.LockingCondition{
		Condition: &transaction_pb.LockingCondition_DelegationLock{
			DelegationLock: delegationLock,
		},
	}
	output := testutil.CreateNativeCoinOutput(constants.SponsorPoolOwner[:], amount, lock)
	utxo := testutil.CreateUTXO(outpoint, output, utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE)
	utxo.BlockHeight = blockHeight
	return utxo
}

