// Package testutil æä¾› TX æ¨¡å—æµ‹è¯•çš„è¾…åŠ©å·¥å…·
//
// ğŸ§ª **æµ‹è¯•æ•°æ®Fixtures**
//
// æœ¬æ–‡ä»¶æä¾›æµ‹è¯•æ•°æ®çš„åˆ›å»ºå‡½æ•°ï¼Œç”¨äºç®€åŒ–æµ‹è¯•ä»£ç ç¼–å†™ã€‚
// éµå¾ª docs/system/standards/principles/testing-standards.md è§„èŒƒã€‚
package testutil

import (
	"crypto/rand"
	"math/big"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxopb "github.com/weisyn/v1/pb/blockchain/utxo"
)

// ==================== æµ‹è¯•æ•°æ® Fixtures ====================

// RandomBytes ç”Ÿæˆéšæœºå­—èŠ‚æ•°ç»„
func RandomBytes(size int) []byte {
	b := make([]byte, size)
	rand.Read(b)
	return b
}

// RandomAddress ç”Ÿæˆéšæœºåœ°å€ï¼ˆ20 å­—èŠ‚ï¼‰
func RandomAddress() []byte {
	return RandomBytes(20)
}

// RandomPublicKey ç”Ÿæˆéšæœºå…¬é’¥ï¼ˆ33 å­—èŠ‚ï¼Œå‹ç¼©æ ¼å¼ï¼‰
func RandomPublicKey() []byte {
	return RandomBytes(33)
}

// RandomTxID ç”Ÿæˆéšæœºäº¤æ˜“ IDï¼ˆ32 å­—èŠ‚ï¼‰
func RandomTxID() []byte {
	return RandomBytes(32)
}

// RandomHash ç”Ÿæˆéšæœºå“ˆå¸Œï¼ˆ32 å­—èŠ‚ï¼‰
func RandomHash() []byte {
	return RandomBytes(32)
}

// CreateOutPoint åˆ›å»ºæµ‹è¯•ç”¨çš„ OutPoint
func CreateOutPoint(txid []byte, index uint32) *transaction.OutPoint {
	if txid == nil {
		txid = make([]byte, 32)
		rand.Read(txid)
	}
	return &transaction.OutPoint{
		TxId:        txid,
		OutputIndex: index,
	}
}

// CreateSingleKeyLock åˆ›å»ºæµ‹è¯•ç”¨çš„ SingleKeyLock
func CreateSingleKeyLock(publicKey []byte) *transaction.LockingCondition {
	if publicKey == nil {
		publicKey = make([]byte, 33)
		rand.Read(publicKey)
	}
	return &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_SingleKeyLock{
			SingleKeyLock: &transaction.SingleKeyLock{
				KeyRequirement: &transaction.SingleKeyLock_RequiredPublicKey{
					RequiredPublicKey: &transaction.PublicKey{
						Value: publicKey,
					},
				},
			},
		},
	}
}

// CreateSingleKeyProof åˆ›å»ºæµ‹è¯•ç”¨çš„ SingleKeyProof
func CreateSingleKeyProof(publicKey []byte, signature []byte) *transaction.UnlockingProof {
	if publicKey == nil {
		publicKey = make([]byte, 33)
		rand.Read(publicKey)
	}
	if signature == nil {
		signature = make([]byte, 64)
		rand.Read(signature)
	}
	return &transaction.UnlockingProof{
		Proof: &transaction.UnlockingProof_SingleKeyProof{
			SingleKeyProof: &transaction.SingleKeyProof{
				Signature: &transaction.SignatureData{
					Value: signature,
				},
				PublicKey: &transaction.PublicKey{
					Value: publicKey,
				},
			},
		},
	}
}

// CreateMultiKeyLock åˆ›å»ºæµ‹è¯•ç”¨çš„ MultiKeyLock
func CreateMultiKeyLock(publicKeys [][]byte, requiredSignatures uint32) *transaction.LockingCondition {
	if publicKeys == nil {
		publicKeys = [][]byte{RandomPublicKey(), RandomPublicKey()}
	}
	if requiredSignatures == 0 {
		requiredSignatures = uint32(len(publicKeys))
	}
	pubKeys := make([]*transaction.PublicKey, len(publicKeys))
	for i, pk := range publicKeys {
		pubKeys[i] = &transaction.PublicKey{Value: pk}
	}
	return &transaction.LockingCondition{
		Condition: &transaction.LockingCondition_MultiKeyLock{
			MultiKeyLock: &transaction.MultiKeyLock{
				AuthorizedKeys:     pubKeys,
				RequiredSignatures: requiredSignatures,
			},
		},
	}
}

// CreateNativeCoinOutput åˆ›å»ºæµ‹è¯•ç”¨çš„åŸç”Ÿå¸è¾“å‡º
func CreateNativeCoinOutput(owner []byte, amount string, lock *transaction.LockingCondition) *transaction.TxOutput {
	if owner == nil {
		owner = make([]byte, 20)
		rand.Read(owner)
	}
	if lock == nil {
		lock = CreateSingleKeyLock(nil)
	}
	return &transaction.TxOutput{
		Owner:             owner,
		LockingConditions: []*transaction.LockingCondition{lock},
		OutputContent: &transaction.TxOutput_Asset{
			Asset: &transaction.AssetOutput{
				AssetContent: &transaction.AssetOutput_NativeCoin{
					NativeCoin: &transaction.NativeCoinAsset{
						Amount: amount,
					},
				},
			},
		},
	}
}

// CreateContractTokenOutput åˆ›å»ºæµ‹è¯•ç”¨çš„åˆçº¦ä»£å¸è¾“å‡º
func CreateContractTokenOutput(
	owner []byte,
	amount string,
	contractAddress []byte,
	classID []byte,
	lock *transaction.LockingCondition,
) *transaction.TxOutput {
	if owner == nil {
		owner = make([]byte, 20)
		rand.Read(owner)
	}
	if contractAddress == nil {
		contractAddress = make([]byte, 20)
		rand.Read(contractAddress)
	}
	if classID == nil {
		classID = []byte("default")
	}
	if lock == nil {
		lock = &transaction.LockingCondition{
			Condition: &transaction.LockingCondition_ContractLock{
				ContractLock: &transaction.ContractLock{
					ContractAddress: append([]byte(nil), contractAddress...),
				},
			},
		}
	}
	return &transaction.TxOutput{
		Owner:             owner,
		LockingConditions: []*transaction.LockingCondition{lock},
		OutputContent: &transaction.TxOutput_Asset{
			Asset: &transaction.AssetOutput{
				AssetContent: &transaction.AssetOutput_ContractToken{
					ContractToken: &transaction.ContractTokenAsset{
						ContractAddress: contractAddress,
						TokenIdentifier: &transaction.ContractTokenAsset_FungibleClassId{
							FungibleClassId: classID,
						},
						Amount: amount,
					},
				},
			},
		},
	}
}

// CreateUTXO åˆ›å»ºæµ‹è¯•ç”¨çš„ UTXO
func CreateUTXO(
	outpoint *transaction.OutPoint,
	output *transaction.TxOutput,
	status utxopb.UTXOLifecycleStatus,
) *utxopb.UTXO {
	if outpoint == nil {
		outpoint = CreateOutPoint(nil, 0)
	}
	if output == nil {
		output = CreateNativeCoinOutput(nil, "1000", nil)
	}
	if status == 0 {
		status = utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE
	}
	return &utxopb.UTXO{
		Outpoint:     outpoint,
		Category:     utxopb.UTXOCategory_UTXO_CATEGORY_ASSET,
		Status:       status,
		OwnerAddress: extractOwnerFromOutput(output), // ä» output æå– owner
		ContentStrategy: &utxopb.UTXO_CachedOutput{
			CachedOutput: output,
		},
	}
}

// extractOwnerFromOutput ä» TxOutput ä¸­æå– owner åœ°å€
func extractOwnerFromOutput(output *transaction.TxOutput) []byte {
	if output != nil && len(output.Owner) > 0 {
		return output.Owner
	}
	return RandomAddress()
}

// CreateTransaction åˆ›å»ºæµ‹è¯•ç”¨çš„äº¤æ˜“
func CreateTransaction(
	inputs []*transaction.TxInput,
	outputs []*transaction.TxOutput,
) *transaction.Transaction {
	return &transaction.Transaction{
		Version:           1,
		Inputs:            inputs,
		Outputs:           outputs,
		CreationTimestamp: uint64(0),
	}
}

// ==================== é‡‘é¢è®¡ç®—è¾…åŠ©å‡½æ•° ====================

// BigIntFromString ä»å­—ç¬¦ä¸²åˆ›å»º big.Intï¼ˆç”¨äºæµ‹è¯•ï¼‰
func BigIntFromString(s string) *big.Int {
	val, _ := new(big.Int).SetString(s, 10)
	return val
}

// BigIntToString å°† big.Int è½¬æ¢ä¸ºå­—ç¬¦ä¸²ï¼ˆç”¨äºæµ‹è¯•ï¼‰
func BigIntToString(val *big.Int) string {
	return val.String()
}

// AmountAdd é‡‘é¢ç›¸åŠ ï¼ˆç”¨äºæµ‹è¯•ï¼‰
func AmountAdd(a, b string) string {
	valA, _ := new(big.Int).SetString(a, 10)
	valB, _ := new(big.Int).SetString(b, 10)
	return new(big.Int).Add(valA, valB).String()
}

// AmountSub é‡‘é¢ç›¸å‡ï¼ˆç”¨äºæµ‹è¯•ï¼‰
func AmountSub(a, b string) string {
	valA, _ := new(big.Int).SetString(a, 10)
	valB, _ := new(big.Int).SetString(b, 10)
	return new(big.Int).Sub(valA, valB).String()
}

// AmountCmp é‡‘é¢æ¯”è¾ƒï¼ˆç”¨äºæµ‹è¯•ï¼‰
// è¿”å›ï¼š-1 (a < b), 0 (a == b), 1 (a > b)
func AmountCmp(a, b string) int {
	valA, _ := new(big.Int).SetString(a, 10)
	valB, _ := new(big.Int).SetString(b, 10)
	return valA.Cmp(valB)
}
